--- a/inst/extdata/bibset-raw/icus01.bib
+++ b/inst/extdata/bibset-raw/icus01.bib
@@ -1,4 +1,5 @@
-% Version 0.2 use entrysets in xdata types to structure hierarchy
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS01,
 title={Moral Orientation of the Sciences},
 titleaddon={First International Conference on Unified Science},
@@ -17,6 +18,7 @@ keywords={primary, program, moonist}
 entryset={ICUS01:C01:G01:S01},
   pattern = {ICUS01:C01:G\d\d:[S|X]},
   patterntype = {key},
+  level = {2},
   settype={Track},
 title={Concrete Applications of Unified Science Solutions}
 }
@@ -27,7 +29,9 @@ title={Concrete Applications of Unified Science Solutions}
   patterntype = {key},
   settype = {Group},
   title = {(morning session)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS01:C01:G01:S01,
@@ -73,6 +77,7 @@ author={Moon, Sun Myung}
 entryset={ICUS01:C02:G01:S01},
   pattern = {ICUS01:C02:G\d\d:[S|X]},
   patterntype = {key},settype={Track},
+  level = {2},
 settype={Track},
 title={Tools for Solution of Scientific Problems: Meta-theory}
 }
@@ -83,7 +88,9 @@ title={Tools for Solution of Scientific Problems: Meta-theory}
   patterntype = {key},
   settype = {Group},
   title = {(morning session)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS01:C02:G01:S01,
@@ -119,7 +126,9 @@ title={Panel discussion}
   patterntype = {key},
   settype = {Group},
   title = {(afternoon session)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS01:C02:G02:S01,
@@ -149,7 +158,9 @@ title={Panel discussion}
   patterntype = {key},
   settype = {Group},
   title = {(evening session)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS01:C02:G03:X01,
@@ -164,6 +175,7 @@ title={Rapporteur's Commentaries}
 entryset={ICUS01:C03:G01:S01},
   pattern = {ICUS01:C03:G\d\d:[S|X]},
   patterntype = {key},settype={Track},
+  level = {2},
 settype={Track},
 title={Application of Unisci Tools: Solutions of Key Problems}
 }
@@ -174,7 +186,9 @@ title={Application of Unisci Tools: Solutions of Key Problems}
   patterntype = {key},
   settype = {Group},
   title = {(morning session)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS01:C03:G01:S01,
@@ -207,7 +221,9 @@ title={Panel discussion}
   patterntype = {key},
   settype = {Group},
   title = {(afternoon session)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS01:C03:G02:S01,
@@ -237,7 +253,9 @@ title={Panel discussion}
   patterntype = {key},
   settype = {Group},
   title = {(evening session)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS01:C03:G03:X01,
