--- a/inst/extdata/bibset-raw/icus02.bib
+++ b/inst/extdata/bibset-raw/icus02.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS02,
 title={Modern Science and Moral Values},
 titleaddon={Second International Conference on the Unity of the Sciences},
@@ -28,6 +30,7 @@ author={Eccles, John Carew}
 entryset={ICUS02:C01:G01:S01},
   pattern = {ICUS02:C01:G\d\d},
   patterntype = {key},
+  level = {2},
 settype={Track},
 title={Science and Philosophy}
 }
@@ -38,7 +41,9 @@ title={Science and Philosophy}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session I},
-  chairperson = {Hintikka, J. and Yosida, N.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Hintikka, J. and Yosida, N.},
 }
 
 @InProceedings{ICUS02:C01:G01:S01,
@@ -67,7 +72,9 @@ author={Cassidy, Harold Gomes}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session II},
-  chairperson = {Laszlo, Ervin and Kihara, H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Laszlo, Ervin and Kihara, H.},
 }
 
 @InProceedings{ICUS02:C01:G02:S01,
@@ -97,7 +104,9 @@ author={Yoon, Se Won}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session III},
-  chairperson = {Süssmann, G. and Yamamoto, M.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Süssmann, G. and Yamamoto, M.},
 }
 
 @InProceedings{ICUS02:C01:G03:S01,
@@ -127,7 +136,9 @@ author={Taylor, Gordon Ramsay Rattray}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session IV},
-  chairperson = {Ahn, B. U. and Inoue, T.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ahn, B. U. and Inoue, T.},
 }
 
 @InProceedings{ICUS02:C01:G04:S01,
@@ -156,7 +167,9 @@ author={Quispel, Gilles}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session V},
-  chairperson = {Yoon, S. W. and Murakami, Y.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Yoon, S. W. and Murakami, Y.},
 }
 
 @InProceedings{ICUS02:C01:G05:S01,
@@ -185,7 +198,9 @@ author={Gerholm, Tor Ragnar}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session VI},
-  chairperson = {Husain, M. and Sakamoto, H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Husain, M. and Sakamoto, H.},
 }
 
 @InProceedings{ICUS02:C01:G06:S01,
@@ -213,6 +228,7 @@ author={S{\"u}ssmann, Georg}
 entryset={ICUS02:C02:G01:S01},
   pattern = {ICUS02:C02:G\d\d},
   patterntype = {key},
+  level = {2},
 settype={Track},
 title={Science, Technology and Society - Socio-Cultural Implications
 of R \& D in Science-Technology}
@@ -224,7 +240,9 @@ of R \& D in Science-Technology}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session I},
-  chairperson = {Long, F. A. and Kumon, S.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Long, F. A. and Kumon, S.},
 }
 
 @InProceedings{ICUS02:C02:G01:S01,
@@ -254,7 +272,9 @@ author={Masini, Giancarlo}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session II},
-  chairperson = {Mayo, L. H. and Yoshimura, T.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mayo, L. H. and Yoshimura, T.},
 }
 
 @InProceedings{ICUS02:C02:G02:S01,
@@ -284,7 +304,9 @@ author={Wang, Wei-Noon}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session III},
-  chairperson = {Dror, Y. and Yoshimura, T.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Dror, Y. and Yoshimura, T.},
 }
 
 @InProceedings{ICUS02:C02:G03:S01,
@@ -313,7 +335,9 @@ author={Jantsch, Erich}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session IV},
-  chairperson = {Wold, H. and Kumon, S.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Wold, H. and Kumon, S.},
 }
 
 @InProceedings{ICUS02:C02:G04:S01,
@@ -343,7 +367,9 @@ author={Strasser, Gabor}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session V},
-  chairperson = {Rosenmayr, L. and Strasser, G.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Rosenmayr, L. and Strasser, G.},
 }
 
 @InProceedings{ICUS02:C02:G05:S01,
@@ -373,7 +399,9 @@ author={Baick, Dai Hyen}
   patterntype = {key},
   settype = {Committee},
   title = {Committee session VI},
-  chairperson = {Rotblat, J. and Atsumi, K.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Rotblat, J. and Atsumi, K.},
 }
 
 @InProceedings{ICUS02:C02:G06:S01,
