--- a/inst/extdata/bibset-raw/icus03.bib
+++ b/inst/extdata/bibset-raw/icus03.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS03,
 title={Science and Absolute Values},
 titleaddon={Third International Conference on the Unity of the Sciences},
@@ -42,6 +44,7 @@ author={Martin, A.J.P.}
 entryset={ICUS03:C01:G01:S01},
   pattern = {ICUS03:C01:G\d\d:[S|X]},
   patterntype = {key},
+  level = {2},
 settype={Committee},
 title={Quality of life: physical, mental and spiritual aspects}
 }
@@ -52,7 +55,9 @@ title={Quality of life: physical, mental and spiritual aspects}
   patterntype = {key},
   settype = {Session},
   title = {Session 1},
-  chairperson = {Cook, S. L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Cook, S. L.},
 }
 
 @InProceedings{ICUS03:C01:G01:S01,
@@ -95,7 +100,9 @@ and Grano, Olavi J.}
   patterntype = {key},
   settype = {Session},
   title = {Session 2},
-  chairperson = {Cook, S. L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Cook, S. L.},
 }
 
 @InProceedings{ICUS03:C01:G02:S01,
@@ -138,7 +145,9 @@ and Jones, Hardin B.}
   patterntype = {key},
   settype = {Session},
   title = {Session 3},
-  chairperson = {Cook, S. L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Cook, S. L.},
 }
 
 @InProceedings{ICUS03:C01:G03:S01,
@@ -173,7 +182,9 @@ author={Cori, Carl Ferdinand and Halsbury, Tony and McMichael, John}
   patterntype = {key},
   settype = {Session},
   title = {Session 3},
-  chairperson = {Cook, S. L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Cook, S. L.},
 }
 
 @InProceedings{ICUS03:C01:G04:S01,
@@ -213,6 +224,7 @@ author={Covian, Miguel R. and H. {de Jouvenel} and Davies, P.M.C. and Goldsmith,
 entryset={ICUS03:C02:G01:S01},
   pattern = {ICUS03:C02:G\d\d:[S|X]},
   patterntype = {key},
+  level = {2},
 settype={Track},
 title={Value change and absolute values}
 }
@@ -223,7 +235,9 @@ title={Value change and absolute values}
   patterntype = {key},
   settype = {Session},
   title = {Session 1},
-  chairperson = {Mellanby, Kenneth},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @InProceedings{ICUS03:C02:G01:S01,
@@ -265,7 +279,9 @@ author={Cournand, André F. and Chagas, C. and Chance, M.R.A. and Mascall, Eric 
   patterntype = {key},
   settype = {Session},
   title = {Session 2},
-  chairperson = {Mellanby, Kenneth},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @InProceedings{ICUS03:C02:G02:S01,
@@ -306,7 +322,9 @@ author={Ingram, David John Edward and Allegra, L. and Dou, Alberto M. and Smart,
   patterntype = {key},
   settype = {Session},
   title = {Session 3},
-  chairperson = {Mellanby, Kenneth},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @InProceedings{ICUS03:C02:G03:S01,
@@ -341,7 +359,9 @@ author={Paelz, Peter and Dickson, Kwesi A. and Moltmann, Jurgen}
   patterntype = {key},
   settype = {Session},
   title = {Session 4},
-  chairperson = {Mellanby, Kenneth},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @InProceedings{ICUS03:C02:G04:S01,
@@ -380,6 +400,7 @@ author={Cantore, Enrico and Webster, R.T. and Jantsch, Erich and Hersch, J.}
 entryset={ICUS03:C03:G01:S01},
   pattern = {ICUS03:C03:G\d\d:[S|X]},
   patterntype = {key},
+  level = {2},
   settype={Track},
   title={The unity of science}
 }
@@ -390,7 +411,9 @@ entryset={ICUS03:C03:G01:S01},
   patterntype = {key},
   settype = {Session},
   title = {Session 1},
-  chairperson = {Crombie, A. C.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Crombie, A. C.},
 }
 
 @InProceedings{ICUS03:C03:G01:S01,
@@ -431,7 +454,9 @@ author={Kuypers, Karel and Roger, J. and Watkins, J.W.N. and Hilpinen, R.}
   patterntype = {key},
   settype = {Session},
   title = {Session 2},
-  chairperson = {Crombie, A. C.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Crombie, A. C.},
 }
 
 @InProceedings{ICUS03:C03:G02:S01,
@@ -466,7 +491,9 @@ author={Riecken, Henry William and Jeuken, M. and Schopper, Erwin K.}
   patterntype = {key},
   settype = {Session},
   title = {Session 3},
-  chairperson = {Crombie, A. C.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Crombie, A. C.},
 }
 
 @InProceedings{ICUS03:C03:G03:S01,
@@ -501,7 +528,9 @@ author={Buckley, Walter F. and Scorer, Richard S. and Anderson, O. Roger}
   patterntype = {key},
   settype = {Session},
   title = {Session 4},
-  chairperson = {Crombie, A. C.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Crombie, A. C.},
 }
 
 @InProceedings{ICUS03:C03:G04:S01,
@@ -540,6 +569,7 @@ author={Tucker, J. and Beck, A. and Fucks, Wilhelm and Goldsmith, Edward}
 entryset={ICUS03:C04:G01:S01},
   pattern = {ICUS03:C04:G\d\d:[S|X]},
   patterntype = {key},
+  level = {2},
 settype={Track},
 title={The idea of the university in a troubled society}
 }
@@ -550,7 +580,9 @@ title={The idea of the university in a troubled society}
   patterntype = {key},
   settype = {Session},
   title = {Session 1},
-  chairperson = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS03:C04:G01:S01,
@@ -592,7 +624,9 @@ author={Pleijel, A. and Pratt, Edward O. and Miyazima, Tatsuoki and Meissner, We
   patterntype = {key},
   settype = {Session},
   title = {Session 2},
-  chairperson = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS03:C04:G02:S01,
@@ -621,7 +655,9 @@ author={Daugs, D.R. and Wold, Herman Ole Andreaas}
   patterntype = {key},
   settype = {Session},
   title = {Session 3},
-  chairperson = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS03:C04:G03:S01,
@@ -649,7 +685,9 @@ author={Lievegoed, B.C.J. and Himmelweit, Hilde}
   patterntype = {key},
   settype = {Session},
   title = {Session 4},
-  chairperson = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS03:C04:G04:S01,
