--- a/inst/extdata/bibset-raw/icus04.bib
+++ b/inst/extdata/bibset-raw/icus04.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS04,
   title = {The Centrality of Science and Absolute Values},
   titleaddon = {The Fourth International Conference on the Unity of the Sciences},
@@ -32,7 +34,9 @@
   patterntype = {key},
   settype = {Track},
   title = {Unity of Science},
-  chairperson = {Eugene P. Wigner and O. Roger Anderson},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Eugene P. Wigner and O. Roger Anderson},
 }
 
 @Set{ICUS04:C01:G01,
@@ -41,7 +45,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {What are the legitimate boundaries of science?},
-  chairperson = {Kenneth Mellanby},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kenneth Mellanby},
 }
 
 @InProceedings{ICUS04:C01:G01:S01,
@@ -123,7 +129,9 @@
   settype = {Committee},
   title = {What is the possibility of convergence, divergence, or synthesis
 of methodology between the social sciences and the natural sciences?},
-  chairperson = {Russell L. Ackoff},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Russell L. Ackoff},
 }
 
 @InProceedings{ICUS04:C01:G02:S01,
@@ -197,7 +205,9 @@ of methodology between the social sciences and the natural sciences?},
   patterntype = {key},
   settype = {Committee},
   title = {What are the characteristics of universal principles?},
-  chairperson = {Ernan McMullin},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ernan McMullin},
 }
 
 @InProceedings{ICUS04:C01:G03:S01,
@@ -252,7 +262,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Track},
   title = {The Standard of Value in Society},
-  chairperson = {Marvin B. Sussman},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Marvin B. Sussman},
 }
 
 @Set{ICUS04:C02:G01,
@@ -261,7 +273,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {What is the structure and role of the family in society?},
-  chairperson = {Marvin B. Sussman},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Marvin B. Sussman},
 }
 
 @InProceedings{ICUS04:C02:G01:S01,
@@ -328,7 +342,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {Is religion functional as a source of standard of value today?},
-  chairperson = {Frederick Sontag},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Frederick Sontag},
 }
 
 @InProceedings{ICUS04:C02:G02:S01,
@@ -401,7 +417,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {Are morals the responsibility of the individual or the social system?},
-  chairperson = {{Steering Committee}},
+  level = {3},
+  editorctype={organizer},
+  editorc = {{Steering Committee}},
 }
 
 @InProceedings{ICUS04:C02:G03:S01,
@@ -461,7 +479,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Track},
   title = {The University, Research Institutions, and Human Society},
-  chairperson = {Alvin M. Weinberg},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Alvin M. Weinberg},
 }
 
 @Set{ICUS04:C03:G01,
@@ -470,7 +490,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {The Problems of the University - Who Governs and for What Purpose?},
-  chairperson = {Nicholas Kurti},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Nicholas Kurti},
 }
 
 @InProceedings{ICUS04:C03:G01:S01,
@@ -516,7 +538,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {What is the Impact of Funding Sources on Scientific Research?},
-  chairperson = {Jules Gueron},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jules Gueron},
 }
 
 @InProceedings{ICUS04:C03:G02:S01,
@@ -582,7 +606,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {What are the Ethical Considerations in the Application of Technology in Society?},
-  chairperson = {Henry David},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Henry David},
 }
 
 @InProceedings{ICUS04:C03:G03:S01,
@@ -646,7 +672,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Track},
   title = {The Future World Order},
-  chairperson = {Morton A. Kaplan},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Morton A. Kaplan},
 }
 
 @Set{ICUS04:C04:G01,
@@ -655,7 +683,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {What is the Nature of Ideological and Cultural Interactions?},
-  chairperson = {Magoroh Maruyama},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Magoroh Maruyama},
 }
 
 @InProceedings{ICUS04:C04:G01:S01,
@@ -718,7 +748,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {How Can We Resolve Global Economic Inequalities?},
-  chairperson = {Morton A. Kaplan},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Morton A. Kaplan},
 }
 
 @InProceedings{ICUS04:C04:G02:S01,
@@ -780,7 +812,9 @@ Copernican assumptions restricting scientific exploration},
   patterntype = {key},
   settype = {Committee},
   title = {What is the Structure of a Happly World and the Possible Means to Realize it Considering Religion, Science, Politics, Economics, and Education?},
-  chairperson = {Ervin Laszlo},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ervin Laszlo},
 }
 
 @InProceedings{ICUS04:C04:G03:S01,
