--- a/inst/extdata/bibset-raw/icus05.bib
+++ b/inst/extdata/bibset-raw/icus05.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS05,
   title = {The Search for Absolute Values: Harmony Among the Sciences},
   titleaddon = {The Fifth International Conference on the Unity of the Sciences},
@@ -73,7 +75,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Religion and Philosophy},
-  chairperson = {Sontag, Frederick},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Sontag, Frederick},
 }
 
 @Set{ICUS05:C01:G01,
@@ -82,7 +86,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Are There Values Common to All Religions?},
-  chairperson = {Parrinder, Geoffrey},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Parrinder, Geoffrey},
 }
 
 @InProceedings{ICUS05:C01:G01:S01,
@@ -113,7 +119,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Can philosophy define values and is any agreement possible between philosophies?},
-  author = {Dufrenne, Mikel},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Dufrenne, Mikel},
 }
 
 @InProceedings{ICUS05:C01:G02:S01,
@@ -145,7 +153,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Religion and society?},
-  chairperson = {Rubenstein, Richard L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Rubenstein, Richard L.},
 }
 
 @InProceedings{ICUS05:C01:G03:S01,
@@ -177,7 +187,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Social Sciences and Humanities},
-  chairperson = {Kaplan, Morton A.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Kaplan, Morton A.},
 }
 
 @Set{ICUS05:C02:G01,
@@ -225,7 +237,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Are There Absolute Values Common to all the Social Sciences},
-  chairperson = {Lerner, Daniel},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lerner, Daniel},
 }
 
 @InProceedings{ICUS05:C02:G02:S01,
@@ -257,7 +271,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Discovery and Transmission of Absolute Values for the Future},
-  chairperson = {King, Alexander},
+  level = {3},
+  editorctype={organizer},
+  editorc = {King, Alexander},
 }
 
 @InProceedings{ICUS05:C02:G03:S01,
@@ -289,7 +305,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Life Sciences},
-  chairperson = {Mellanby, Kenneth},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @Set{ICUS05:C03:G01,
@@ -298,7 +316,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Origin of Life},
-  chairperson = {Eigen, Manfred},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Eigen, Manfred},
 }
 
 @InProceedings{ICUS05:C03:G01:S01,
@@ -330,7 +350,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Neuroscience and absolute values},
-  chairperson = {Pribram, Karl H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pribram, Karl H.},
 }
 
 @InProceedings{ICUS05:C03:G02:S01,
@@ -362,7 +384,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Absolute Values and Human Survival},
-  chairperson = {Anderson, O. Roger},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Anderson, O. Roger},
 }
 
 @InProceedings{ICUS05:C03:G03:S01,
@@ -394,7 +418,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Physical Sciences},
-  chairperson = {Wigner, Eugene P.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Wigner, Eugene P.},
 }
 
 @Set{ICUS05:C04:G01,
@@ -403,7 +429,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Science and Values},
-  author = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS05:C04:G01:S01,
@@ -435,7 +463,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Present State of Science and Technology and their Potential for the Betterment of Mankind},
-  chairperson = {Ne'eman, Yuval},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ne'eman, Yuval},
 }
 
 @InProceedings{ICUS05:C04:G02:S01,
@@ -466,7 +496,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The New Physics and Absolute Values},
-  chairperson = {Jones, Reginald V.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jones, Reginald V.},
 }
 
 @InProceedings{ICUS05:C04:G03:S01,
