--- a/inst/extdata/bibset-raw/icus07.bib
+++ b/inst/extdata/bibset-raw/icus07.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS07,
   title = {The re-evaluation of existing values and the search for absolute values},
   titleaddon = {The Seventh International Conference on the Unity of the Sciences},
@@ -66,7 +68,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Religion and Philosophy},
-  chairperson = {Rubenstein, Richard L.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Rubenstein, Richard L.},
 }
 
 @Set{ICUS07:C01:G01,
@@ -75,7 +79,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Redemption in Contemporary Theology},
-  chairperson = {Vahanian, Gabriel},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Vahanian, Gabriel},
 }
 
 @InProceedings{ICUS07:C01:G01:S01,
@@ -107,7 +113,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Aspects of Religious Consciousness},
-  chairperson = {Barker, Eileen V.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Barker, Eileen V.},
 }
 
 @InProceedings{ICUS07:C01:G02:S01,
@@ -139,7 +147,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Death and Suicide in Contemporary Thought},
-  chairperson = {Kaufmann, Walter},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kaufmann, Walter},
 }
 
 @InProceedings{ICUS07:C01:G03:S01,
@@ -171,7 +181,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Freedom and Sources of Authority},
-  chairperson = {Dougherty, Jude P.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Dougherty, Jude P.},
 }
 
 @InProceedings{ICUS07:C01:G04:S01,
@@ -203,7 +215,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Social Sciences},
-  chairperson = {Lerner, Daniel},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lerner, Daniel},
 }
 
 @Set{ICUS07:C02:G01,
@@ -212,7 +226,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Youth Challenge ot Existing Ideas and Institutions},
-  chairperson = {Berger, René},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Berger, René},
 }
 
 @InProceedings{ICUS07:C02:G01:S01,
@@ -241,7 +257,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Democratic Control of Anti-Democratic Action},
-  chairperson = {Handlin, Oscar},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Handlin, Oscar},
 }
 
 @InProceedings{ICUS07:C02:G02:S01,
@@ -276,7 +294,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Values and Development - Focus on the Middle East},
-  chairperson = {Lerner, Abba P.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lerner, Abba P.},
 }
 
 @InProceedings{ICUS07:C02:G03:S01,
@@ -311,7 +331,9 @@
   patterntype = {key},
   settype = {Group},
   title = {World Futures - Which Ways are Forward?},
-  chairperson = {Peccei, Aurelio},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Peccei, Aurelio},
 }
 
 @InProceedings{ICUS07:C02:G04:S01,
@@ -346,7 +368,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Life Sciences},
-  chairperson = {Mellanby, Kenneth},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @Set{ICUS07:C03:G01,
@@ -355,7 +379,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Ethical Implications of Biology},
-  chairperson = {Berger, René},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Berger, René},
 }
 
 @InProceedings{ICUS07:C03:G01:S01,
@@ -387,7 +413,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Global Health Care},
-  chairperson = {Ambrus, Julian L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ambrus, Julian L.},
 }
 
 @InProceedings{ICUS07:C03:G02:S01,
@@ -426,7 +454,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Evolution of Consciousness},
-  chairperson = {Pribram, Karl H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pribram, Karl H.},
 }
 
 @InProceedings{ICUS07:C03:G03:S01,
@@ -463,7 +493,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Group},
   title = {Human Evolution},
-  chairperson = {{Villee Jr}, Claude A.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {{Villee Jr}, Claude A.},
 }
 
 @InProceedings{ICUS07:C03:G04:S01,
@@ -495,7 +527,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Committee},
   title = {The Physical Sciences},
-  chairperson = {Seitz, Frederick},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Seitz, Frederick},
 }
 
 @Set{ICUS07:C04:G01,
@@ -504,7 +538,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Group},
   title = {Perspectives of Science},
-  chairperson = {King, Alexander},
+  level = {3},
+  editorctype={organizer},
+  editorc = {King, Alexander},
 }
 
 @InProceedings{ICUS07:C04:G01:S01,
@@ -536,7 +572,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Group},
   title = {Contact with Extraterrestrial Civilizations},
-  chairperson = {Atalay, Bulent},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Atalay, Bulent},
 }
 
 @InProceedings{ICUS07:C04:G02:S01,
@@ -562,7 +600,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Group},
   title = {Science and Philosophy},
-  chairperson = {Andersson, Gunnar},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Andersson, Gunnar},
 }
 
 @InProceedings{ICUS07:C04:G03:S01,
@@ -594,7 +634,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Group},
   title = {Science and Society},
-  chairperson = {Alonso, Marcelo},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Alonso, Marcelo},
 }
 
 @InProceedings{ICUS07:C04:G04:S01,
@@ -626,7 +668,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {The Complementary Nature of Religion and Science},
-  moderator = {{Hills Jr}, Samuel S.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {{Hills Jr}, Samuel S.},
 }
 
 @InProceedings{ICUS07:C05:G01:S01,
@@ -654,7 +698,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Absolute Values and Motivation},
-  moderator = {Jones, Reginald V.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jones, Reginald V.},
 }
 
 @InProceedings{ICUS07:C05:G02:S01,
@@ -682,7 +728,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Human Nature and its Mysteries: What We Know and What We Need to Know},
-  moderator = {Capobigri, A. Robert},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Capobigri, A. Robert},
 }
 
 @InProceedings{ICUS07:C05:G03:S01,
@@ -710,7 +758,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Multidisciplinary Studies: Ways, Means and Applications},
-  moderator = {Borrero, Alfonso},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Borrero, Alfonso},
 }
 
 @InProceedings{ICUS07:C05:G04:S01,
@@ -733,7 +783,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {World Information Network},
-  moderator = {Moses, Charles},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Moses, Charles},
 }
 
 @InProceedings{ICUS07:C05:G05:S01,
@@ -761,7 +813,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Science as an Instrument for Peace},
-  moderator = {Toll, John S.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Toll, John S.},
 }
 
 @InProceedings{ICUS07:C05:G06:S01,
@@ -789,7 +843,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Limits and Dangers of Science},
-  moderator = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS07:C05:G07:S01,
@@ -817,7 +873,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Value Assumptions in Education},
-  moderator = {Lincoln, C. Eric},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lincoln, C. Eric},
 }
 
 @InProceedings{ICUS07:C05:G08:S01,
@@ -851,7 +909,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Transfer of Science and Technology},
-  moderator = {Nahvi, Mahmood J.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Nahvi, Mahmood J.},
 }
 
 @InProceedings{ICUS07:C05:G09:S01,
@@ -879,7 +939,9 @@ creative thinking.}}
   patterntype = {key},
   settype = {Discussion},
   title = {Can Human Rights be Articulated in Objective Principles?},
-  moderator = {Krislov, Samuel},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Krislov, Samuel},
 }
 
 @InProceedings{ICUS07:C05:G10:S01,
