--- a/inst/extdata/bibset-raw/icus08.bib
+++ b/inst/extdata/bibset-raw/icus08.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS08,
   title = {The responsibility of the academic community in the search for absolute values},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
@@ -55,7 +57,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Values and Consciousness},
-  chairperson = {Kaufmann, Walter},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Kaufmann, Walter},
 }
 
 @Set{ICUS08:C01:G01,
@@ -64,7 +68,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Humanities vs. Social Sciences},
-  chairperson = {Kurtz, Paul},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurtz, Paul},
 }
 
 @InProceedings{ICUS08:C01:G01:S01,
@@ -90,7 +96,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Can Values Be Absolute?},
-  chairperson = {Bartley, W. W. III},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Bartley, W. W. III},
 }
 
 @InProceedings{ICUS08:C01:G02:S01,
@@ -122,7 +130,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Brain, Freedom and Responsibility},
-  chairperson = {Pribram, Karl H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pribram, Karl H.},
 }
 
 @InProceedings{ICUS08:C01:G03:S01,
@@ -160,7 +170,9 @@
   patterntype = {key},
   settype = {Group},
   title = {What is Happiness?},
-  chairperson = {Soll, Ivan},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Soll, Ivan},
 }
 
 @InProceedings{ICUS08:C01:G04:S01,
@@ -192,7 +204,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Change and Development},
-  chairperson = {Kaplan, Morton A.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Kaplan, Morton A.},
 }
 
 @Set{ICUS08:C02:G01,
@@ -201,7 +215,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Comparative Philosophies of Change},
-  chairperson = {Nasr, Seyyed Hossein},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Nasr, Seyyed Hossein},
 }
 
 @InProceedings{ICUS08:C02:G01:S01,
@@ -232,7 +248,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Language, Tradition and Cross-Cultural Values},
-  chairperson = {Wescott, Roger W.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Wescott, Roger W.},
 }
 
 @InProceedings{ICUS08:C02:G02:S01,
@@ -264,7 +282,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Development of Civilization and the Changing Self-Conception of Man},
-  chairperson = {Radnitzky, Gerard},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Radnitzky, Gerard},
 }
 
 @InProceedings{ICUS08:C02:G03:S01,
@@ -296,7 +316,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Resources and Economic Development},
-  chairperson = {Botchway, Francis A.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Botchway, Francis A.},
 }
 
 @InProceedings{ICUS08:C02:G04:S01,
@@ -328,7 +350,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Population and Quality of Life},
-  chairperson = {Peccei, Aurelio},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Peccei, Aurelio},
 }
 
 @Set{ICUS08:C03:G01,
@@ -337,7 +361,9 @@
   patterntype = {key},
   settype = {Group},
   title = {How Does Material Well-Being Affect ''Happiness''?},
-  chairperson = {Gray, Elizabeth Dodson},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Gray, Elizabeth Dodson},
 }
 
 @InProceedings{ICUS08:C03:G01:S01,
@@ -369,7 +395,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Tomorrow's World Population Trends},
-  chairperson = {Stolnitz, George J.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Stolnitz, George J.},
 }
 
 @InProceedings{ICUS08:C03:G02:S01,
@@ -394,7 +422,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Health Systems and Population Control},
-  chairperson = {Pratt, Edward O.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pratt, Edward O.},
 }
 
 @InProceedings{ICUS08:C03:G03:S01,
@@ -426,7 +456,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Consequences of World Population Growth},
-  chairperson = {Singer, S. Fred},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Singer, S. Fred},
 }
 
 @InProceedings{ICUS08:C03:G04:S01,
@@ -464,7 +496,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Vision and Direction of the Future},
-  chairperson = {Seitz, Frederick},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Seitz, Frederick},
 }
 
 @Set{ICUS08:C04:G01,
@@ -473,7 +507,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Technology and Human Values},
-  chairperson = {Ferré, Frederick},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ferré, Frederick},
 }
 
 @InProceedings{ICUS08:C04:G01:S01,
@@ -498,7 +534,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Science and Technology Policies for Developing Nations},
-  chairperson = {King, Alexander},
+  level = {3},
+  editorctype={organizer},
+  editorc = {King, Alexander},
 }
 
 @InProceedings{ICUS08:C04:G02:S01,
@@ -530,7 +568,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Frontiers of Science and Technology},
-  chairperson = {Weinberg, Alvin M.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Weinberg, Alvin M.},
 }
 
 @InProceedings{ICUS08:C04:G03:S01,
@@ -562,7 +602,9 @@
   patterntype = {key},
   settype = {Group},
   title = {A Look at the 1990's - What Does the Future Hold?},
-  chairperson = {Piganiol, Pierre},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Piganiol, Pierre},
 }
 
 @InProceedings{ICUS08:C04:G04:S01,
@@ -603,7 +645,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Is there life after death?},
-  moderator = {Barker, Eileen V.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Barker, Eileen V.},
 }
 
 @InProceedings{ICUS08:C05:G01:S01,
@@ -619,7 +663,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Preservation of Culture: What are the limits?},
-  moderator = {Berger, René},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Berger, René},
 }
 
 @InProceedings{ICUS08:C05:G02:S01,
@@ -635,7 +681,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {What are the Values Implicit in Economic Development?},
-  moderator = {Lamberton, Donald M.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lamberton, Donald M.},
 }
 
 @InProceedings{ICUS08:C05:G03:S01,
@@ -651,7 +699,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Normalization of Violence through Mass Communication},
-  moderator = {Lerner, Daniel},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lerner, Daniel},
 }
 
 @InProceedings{ICUS08:C05:G04:S01,
@@ -673,7 +723,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Do New Patterns of Wealth Creation Demand New Structures of Society?},
-  moderator = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS08:C05:G05:S01,
@@ -689,7 +741,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Human Knowledge and Scientific Models},
-  moderator = {Gerholm, Tor Ragnar},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Gerholm, Tor Ragnar},
 }
 
 @InProceedings{ICUS08:C05:G06:S01,
@@ -705,7 +759,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Sociobiology and Value Systems},
-  moderator = {Pringle, J. W. S.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pringle, J. W. S.},
 }
 
 @InProceedings{ICUS08:C05:G07:S01,
@@ -721,7 +777,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Becoming of a Human Person: Mother-Child Relations in the First Year of Life},
-  moderator = {Jaraningrat, Koent},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jaraningrat, Koent},
 }
 
 @InProceedings{ICUS08:C05:G08:S01,
@@ -737,7 +795,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Man's Place in the World Eco-System},
-  moderator = {Mellanby, Kenneth},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @InProceedings{ICUS08:C05:G09:S01,
@@ -753,7 +813,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Prospects for Reducing World Hunger},
-  moderator = {Dewan, M. L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Dewan, M. L.},
 }
 
 @InProceedings{ICUS08:C05:G10:S01,
