--- a/inst/extdata/bibset-raw/icus09.bib
+++ b/inst/extdata/bibset-raw/icus09.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS09,
   title = {Absolute Values and the Search for the Peace of Mankind},
   titleaddon = {The Eighth International Conference on the Unity of the Sciences},
@@ -32,7 +34,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Values and Consciousness},
-  chairperson = {Dougherty, Jude P.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Dougherty, Jude P.},
 }
 
 @Set{ICUS09:C01:G01,
@@ -41,7 +45,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Religion and Values},
-  chairperson = {Reck, Andrew J.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Reck, Andrew J.},
 }
 
 @InProceedings{ICUS09:C01:G01:S01,
@@ -66,7 +72,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Family and Values},
-  chairperson = {Fichter, Joseph H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Fichter, Joseph H.},
 }
 
 @InProceedings{ICUS09:C01:G02:S01,
@@ -98,7 +106,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Economy and Values},
-  chairperson = {Barber, Richard L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Barber, Richard L.},
 }
 
 @InProceedings{ICUS09:C01:G03:S01,
@@ -126,7 +136,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Policy and Values},
-  chairperson = {Howard, A. E. Dick},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Howard, A. E. Dick},
 }
 
 @InProceedings{ICUS09:C01:G04:S01,
@@ -161,7 +173,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Change and Development},
-  chairperson = {Skinner, Elliott P.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Skinner, Elliott P.},
 }
 
 @Set{ICUS09:C02:G01,
@@ -170,7 +184,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Traditional Views of Change and Development},
-  chairperson = {Zamora, Mario D.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Zamora, Mario D.},
 }
 
 @InProceedings{ICUS09:C02:G01:S01,
@@ -195,7 +211,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Contemporary Western and Non-Western Philosophies of Change and Development},
-  chairperson = {Srinivasan, Mangalam},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Srinivasan, Mangalam},
 }
 
 @InProceedings{ICUS09:C02:G02:S01,
@@ -220,7 +238,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Man, Society and the State in Advanced Societies},
-  chairperson = {Galantay, Ervin Y.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Galantay, Ervin Y.},
 }
 
 @InProceedings{ICUS09:C02:G03:S01,
@@ -245,7 +265,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Language and Development},
-  chairperson = {Wescott, Roger W.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Wescott, Roger W.},
 }
 
 @InProceedings{ICUS09:C02:G04:S01,
@@ -270,7 +292,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Population and Quality of Life},
-  chairperson = {Mellanby, Kenneth},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @Set{ICUS09:C03:G01,
@@ -279,7 +303,9 @@
   patterntype = {key},
   settype = {Group},
   title = {What is Meant by ''Quality of Life''?},
-  chairperson = {Mellanby, Kenneth},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @InProceedings{ICUS09:C03:G01:S01,
@@ -305,7 +331,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Population and Values},
-  chairperson = {Pringle, J. W. S.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pringle, J. W. S.},
 }
 
 @InProceedings{ICUS09:C03:G02:S01,
@@ -337,7 +365,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Biotechnology and Values},
-  chairperson = {Krebs, Hans A.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Krebs, Hans A.},
 }
 
 @InProceedings{ICUS09:C03:G03:S01,
@@ -362,7 +392,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Education and Values},
-  chairperson = {Golden, John},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Golden, John},
 }
 
 @InProceedings{ICUS09:C03:G04:S01,
@@ -387,7 +419,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Vision and Direction of the Future},
-  chairperson = {Weinberg, Alvin M.},
+  level = {2,
+  editorctype={organizer},
+  editorc = {Weinberg, Alvin M.},
 }
 
 @Set{ICUS09:C04:G01,
@@ -396,7 +430,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Technology and Authority: Centralization and Control},
-  chairperson = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS09:C04:G01:S01,
@@ -421,7 +457,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Military Technology and the Individual},
-  chairperson = {Foster, Richard B.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Foster, Richard B.},
 }
 
 @InProceedings{ICUS09:C04:G02:S01,
@@ -446,7 +484,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Impact of Government on the Conduct of Science},
-  chairperson = {Weinberg, Alvin M.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Weinberg, Alvin M.},
 }
 
 @InProceedings{ICUS09:C04:G03:S01,
@@ -465,7 +505,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Wealth and Society},
-  chairperson = {Lewis, W. Bennett},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lewis, W. Bennett},
 }
 
 @InProceedings{ICUS09:C04:G04:S01,
@@ -493,7 +535,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Multilingualism in Developing Countries, Industrialized Countries and Future Human Communities},
-  moderator = {Wescott, Roger W.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Wescott, Roger W.},
 }
 
 @InProceedings{ICUS09:C05:G01:S01,
@@ -510,7 +554,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Cultural Impact of Science and Technology on Developing Countries},
-  moderator = {Bhiday, M. R.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Bhiday, M. R.},
 }
 
 @InProceedings{ICUS09:C05:G02:S01,
@@ -528,7 +574,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Geopolitics of European Security in the Nuclear Age and World Peace},
-  moderator = {{Ben-Dak}, Joseph},
+  level = {3},
+  editorctype={organizer},
+  editorc = {{Ben-Dak}, Joseph},
 }
 
 @InProceedings{ICUS09:C05:G03:S01,
@@ -547,7 +595,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Ethology, Ecology and Philosophy of Traditional Health Care Delivery System of the Akamba},
-  moderator = {Pribram Karl H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pribram Karl H.},
 }
 
 @InProceedings{ICUS09:C05:G04:S01,
@@ -565,7 +615,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Matrifocal Family: From an Anthropological Curiosity to a World Problem},
-  moderator = {Dewan, M. L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Dewan, M. L.},
 }
 
 @InProceedings{ICUS09:C05:G05:S01,
@@ -584,7 +636,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Sincerity, Rationality and Monitoring},
-  moderator = {Radnitzky, Gerard},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Radnitzky, Gerard},
 }
 
 @InProceedings{ICUS09:C05:G06:S01,
@@ -602,7 +656,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Science and the Clarification of Values: Implications of Recent Findings in Psychological and Psychic Research},
-  moderator = {Mitchell, Edgar D.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Mitchell, Edgar D.},
 }
 
 @InProceedings{ICUS09:C06:G01:S01,
@@ -620,7 +676,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Rapid Economic and Social Change in Developing Nations and the Problem of Crime},
-  moderator = {Farracuti, Franco},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Farracuti, Franco},
 }
 
 @InProceedings{ICUS09:C06:G02:S01,
@@ -638,7 +696,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The North-South Problem},
-  moderator = {Bey, Arifin},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Bey, Arifin},
 }
 
 @InProceedings{ICUS09:C06:G03:S01,
@@ -656,7 +716,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Alternatives to Aggression},
-  moderator = {Kegley, Jacquelyn Ann K.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kegley, Jacquelyn Ann K.},
 }
 
 @InProceedings{ICUS09:C06:G04:S01,
@@ -673,7 +735,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Ecological Visions for Designing a Sustainable Future},
-  moderator = {Jantsch, Erich},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jantsch, Erich},
 }
 
 @InProceedings{ICUS09:C06:G05:S01,
@@ -689,7 +753,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Emerging Paradigm and its Contribution to the Unity of Sciences},
-  moderator = {Jaffe, Russel M.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jaffe, Russel M.},
 }
 
 @InProceedings{ICUS09:C06:G06:S01,
