--- a/inst/extdata/bibset-raw/icus11.bib
+++ b/inst/extdata/bibset-raw/icus11.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS11,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Eleventh International Conference on the Unity of the Sciences},
@@ -18,7 +20,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Responsibility of the Individual in World Society},
-  chairperson = {Rubenstein, Richard L.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Rubenstein, Richard L.},
 }
 
 @Set{ICUS11:C01:G01,
@@ -27,7 +31,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Arts and Contemporary Society},
-  chairperson = {Henry, Jean},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Henry, Jean},
 }
 
 @InProceedings{ICUS11:C01:G01:S01,
@@ -63,7 +69,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Politics and Contemporary Society},
-  chairperson = {Kim, Ilpyong J.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kim, Ilpyong J.},
 }
 
 @InProceedings{ICUS11:C01:G02:S01,
@@ -93,7 +101,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Values and Contemporary Society},
-  chairperson = {Kliever, Lonnie D.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kliever, Lonnie D.},
 }
 
 @InProceedings{ICUS11:C01:G03:S01,
@@ -123,7 +133,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Technology as a panacea?},
-  chairperson = {Ayres, Robert U.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Ayres, Robert U.},
 }
 
 @Set{ICUS11:C02:G01,
@@ -132,7 +144,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Technology and the Problems Facing Industrialized Countries in the Next Century},
-  chairperson = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS11:C02:G01:S01,
@@ -163,7 +177,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Technology and the Problems Facing the Third World in the Next Century},
-  chairperson = {Srinivasan, Mangalam},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Srinivasan, Mangalam},
 }
 
 @InProceedings{ICUS11:C02:G02:S01,
@@ -206,7 +222,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Technology and Space: Pie in the Sky or New Frontiers?},
-  chairperson = {Singer, S. Fred},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Singer, S. Fred},
 }
 
 @InProceedings{ICUS11:C02:G04:S01,
@@ -232,7 +250,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Human Populations in the Future},
-  chairperson = {{Villee Jr}, Claude A.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {{Villee Jr}, Claude A.},
 }
 
 @Set{ICUS11:C03:G01,
@@ -241,7 +261,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Food Supply and Human Populations},
-  chairperson = {Kono, Shigemi},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kono, Shigemi},
 }
 
 @InProceedings{ICUS11:C03:G01:S01,
@@ -271,7 +293,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Age and Ageing: Neurobiological Aspects},
-  chairperson = {Seitelberger, Franz},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Seitelberger, Franz},
 }
 
 @InProceedings{ICUS11:C03:G03:S01,
@@ -297,7 +321,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Age and Ageing: Psychosocial Aspects},
-  chairperson = {Zapotoczky, Klaus},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Zapotoczky, Klaus},
 }
 
 @InProceedings{ICUS11:C03:G04:S01,
@@ -323,7 +349,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Models of Rationality},
-  chairperson = {Radnitzky, Gerard},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Radnitzky, Gerard},
 }
 
 @Set{ICUS11:C04:G02,
@@ -332,7 +360,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Evolutionary epistemology},
-  chairperson = {Munz, Peter},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Munz, Peter},
 }
 
 @InProceedings{ICUS11:C04:G02:S01,
@@ -368,7 +398,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Economic Models of Rationality},
-  chairperson = {Dobriansky, Lev E.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Dobriansky, Lev E.},
 }
 
 @InProceedings{ICUS11:C04:G03:S01,
@@ -405,7 +437,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Philosophical Theories of Rationality},
-  chairperson = {Bartley, William Warren III},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Bartley, William Warren III},
 }
 
 @InProceedings{ICUS11:C04:G04:S01,
@@ -448,7 +482,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Self, Society, and the Cosmos},
-  chairperson = {Pribram, Karl H.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Pribram, Karl H.},
 }
 
 @Set{ICUS11:C05:G01,
@@ -457,7 +493,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Evolution of Moral and Ethical Behavior},
-  chairperson = {Scarr, Sandra},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Scarr, Sandra},
 }
 
 @InProceedings{ICUS11:C05:G01:S01,
@@ -493,7 +531,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Origins of Human Culture},
-  chairperson = {McGuinness, Diane},
+  level = {3},
+  editorctype={organizer},
+  editorc = {McGuinness, Diane},
 }
 
 @InProceedings{ICUS11:C05:G02:S01,
@@ -523,7 +563,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The New Physics and Cosmology},
-  chairperson = {Fukuda, Nobuyuki},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Fukuda, Nobuyuki},
 }
 
 @InProceedings{ICUS11:C05:G03:S01,
@@ -558,7 +600,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Spiritual Nature of Man},
-  chairperson = {Rauscher, Elizabeth A.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Rauscher, Elizabeth A.},
 }
 
 @InProceedings{ICUS11:C05:G04:S01,
@@ -592,7 +636,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Anatomy of Peace},
-  moderator = {{Ben-Dak}, Joseph},
+  level = {3},
+  editorctype={organizer},
+  editorc = {{Ben-Dak}, Joseph},
 }
 
 @InProceedings{ICUS11:C06:G01:S01,
@@ -609,7 +655,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Possibilities of Nutrition Intervention in Latin America},
-  moderator = {Pincheira, Guido},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pincheira, Guido},
 }
 
 @InProceedings{ICUS11:C06:G02:S01,
@@ -626,7 +674,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Organization of Matter: Is It an Accident or a Scheme?},
-  moderator = {Skolimowski, Henryk},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Skolimowski, Henryk},
 }
 
 @InProceedings{ICUS11:C06:G03:S01,
@@ -653,7 +703,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Family: Past, Present, Future},
-  moderator = {Wescott, Hilja B.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Wescott, Hilja B.},
 }
 
 @InProceedings{ICUS11:C06:G04:S01,
@@ -670,7 +722,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Search for Values in Public Administration},
-  moderator = {Leighton, Gerald S.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Leighton, Gerald S.},
 }
 
 @InProceedings{ICUS11:C06:G05:S01,
