--- a/inst/extdata/bibset-raw/icus12.bib
+++ b/inst/extdata/bibset-raw/icus12.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS12,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Twelfth International Conference on the Unity of the Sciences},
@@ -66,7 +68,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Unity of the Sciences},
-  chairperson = {Wigner, Eugene P. and Radnitzky, Gerard},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Wigner, Eugene P. and Radnitzky, Gerard},
 }
 
 @set{ICUS12:C01:G01,
@@ -75,7 +79,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Idea of ''the Unity of Sciencd'' in Intellectual History and the Division of Knowledge},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C01:G01:S01,
@@ -108,7 +114,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Methodological Aspects, the Unity of Physics and the Unifying Potential of the Evolutionary Perspective},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C01:G02:S01,
@@ -141,7 +149,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Unifying Potential of the Ideas of a Spontaneous Order, Self-Organizing System, and the Economic Approach},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C01:G03:S01,
@@ -175,7 +185,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Challenge of Education in African Social Transformation},
-  chairperson = {Mellanby, Kenneth and Wagaw, Teshome G.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth and Wagaw, Teshome G.},
 }
 
 @set{ICUS12:C02:G01,
@@ -184,7 +196,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Identity and Relevance},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C02:G01:S01,
@@ -217,7 +231,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Dynamics of Social Institutions in Education},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C02:G02:S01,
@@ -257,7 +273,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Justice and Cooperation},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C02:G03:S01,
@@ -290,7 +308,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Art and Technology},
-  chairperson = {Berger, René},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Berger, René},
 }
 
 @set{ICUS12:C03:G01,
@@ -299,7 +319,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C03:G01:S01,
@@ -332,7 +354,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C03:G02:S01,
@@ -372,7 +396,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C03:G03:S01,
@@ -402,7 +428,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Developmental Experiences in East Asia and Latin America},
-  chairperson = {King, Alexander and Kim, Ilpyong J.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {King, Alexander and Kim, Ilpyong J.},
 }
 
 @set{ICUS12:C04:G01,
@@ -411,7 +439,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Development in East Asia},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C04:G01:S01,
@@ -451,7 +481,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Development in Latin America},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C04:G02:S01,
@@ -484,7 +516,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Development for the Future},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C04:G03:S01,
@@ -503,7 +537,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Emotions: Focus on Inter-Male Aggression and Dominance Systems},
-  chairperson = {Pribram, Karl H. and McGuinness, Diane},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Pribram, Karl H. and McGuinness, Diane},
 }
 
 @set{ICUS12:C05:G01,
@@ -512,7 +548,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Aggression and Dominance in Non-Human Primates},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C05:G01:S01,
@@ -538,7 +576,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Aggression and Dominance in Small Human Societies},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C05:G02:S01,
@@ -578,7 +618,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Aggression and Dominance: Biological, Psychological, Anthropological, and Political Implications},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C05:G03:S01,
@@ -608,7 +650,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Global Environmental Problems},
-  chairperson = {Landsberg, Helmut E. and Singer, S. Fred},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Landsberg, Helmut E. and Singer, S. Fred},
 }
 
 @set{ICUS12:C06:G01,
@@ -617,7 +661,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C06:G01:S01,
@@ -650,7 +696,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C06:G02:S01,
@@ -683,7 +731,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS12:C06:G03:S01,
