--- a/inst/extdata/bibset-raw/icus13.bib
+++ b/inst/extdata/bibset-raw/icus13.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS13,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Thirteenth International Conference on the Unity of the Sciences},
@@ -30,7 +32,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Unity of the Sciences},
-  chairperson = {Weinberg, Alvin M. and Radnitzky, Gerard},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Weinberg, Alvin M. and Radnitzky, Gerard},
 }
 
 @Set{ICUS13:C01:G01,
@@ -39,7 +43,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C01:G01:S01,
@@ -72,7 +78,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C01:G02:S01,
@@ -96,7 +104,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C01:G03:S01,
@@ -129,7 +139,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C01:G04:S01,
@@ -155,7 +167,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C01:G05:S01,
@@ -174,7 +188,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Theoretical Empiricism: A General Rationale for Scientific Model-Building},
-  chairperson = {Robinson, Enders A. and Wold, Herman},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Robinson, Enders A. and Wold, Herman},
 }
 
 @Set{ICUS13:C02:G01,
@@ -183,7 +199,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C02:G01:S01,
@@ -209,7 +227,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C02:G02:S01,
@@ -235,7 +255,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C02:G03:S01,
@@ -261,7 +283,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C02:G04:S01,
@@ -287,7 +311,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C02:G05:S01,
@@ -306,7 +332,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Human Beings and the Urban Environment: The Future Metropolis},
-  chairperson = {{Johnson-Marshall}, Percy and Galantay, Ervin Y.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {{Johnson-Marshall}, Percy and Galantay, Ervin Y.},
 }
 
 @Set{ICUS13:C03:G01,
@@ -315,7 +343,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C03:G01:S01,
@@ -355,7 +385,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C03:G02:S01,
@@ -381,7 +413,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C03:G03:S01,
@@ -414,7 +448,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C03:G04:S01,
@@ -440,7 +476,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Crises in Education in the 1980's: A Survey of Educational Values and Systems},
-  chairperson = {Ryan, John W. and Fukuda, Nobuyuki},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Ryan, John W. and Fukuda, Nobuyuki},
 }
 
 @Set{ICUS13:C04:G01,
@@ -449,7 +487,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C04:G01:S01,
@@ -482,7 +522,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C04:G02:S01,
@@ -508,7 +550,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C04:G03:S01,
@@ -541,7 +585,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C04:G04:S01,
@@ -566,7 +612,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C04:G05:S01,
@@ -592,7 +640,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Ocean in Human Affairs},
-  chairperson = {Spilhaus, Athelstan and Singer, S. Fred},
+  level = {2,
+  editorctype={organizer},
+  editorc = {Spilhaus, Athelstan and Singer, S. Fred},
 }
 
 @Set{ICUS13:C05:G01,
@@ -601,7 +651,9 @@
   patterntype = {key},
   settype = {Session},
   title = {History and Evolution of Earth and Ocean},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C05:G01:S01,
@@ -633,7 +685,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Ocean-Atmosphere Interaction},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C05:G02:S01,
@@ -659,7 +713,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Ocean Research and Technology},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C05:G03:S01,
@@ -691,7 +747,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Ocean in Human Commerce},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C05:G04:S01,
@@ -724,7 +782,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Spirit and Science: Imaginary and Reality},
-  chairperson = {Charon, Jean E.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Charon, Jean E.},
 }
 
 @Set{ICUS13:C06:G01,
@@ -733,7 +793,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C06:G01:S01,
@@ -763,7 +825,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C06:G02:S01,
@@ -786,7 +850,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C06:G03:S01,
@@ -815,7 +881,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C06:G04:S01,
@@ -838,7 +906,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C06:G05:S01,
@@ -862,7 +932,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Search for Global Ideology},
-  chairperson = {Sontag, Frederick E. and Mavrodes, George I. and Sharkey, Paul W.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Sontag, Frederick E. and Mavrodes, George I. and Sharkey, Paul W.},
 }
 
 @Set{ICUS13:C07:G01,
@@ -871,7 +943,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C07:G01:S01,
@@ -900,7 +974,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C07:G02:S01,
@@ -923,7 +999,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C07:G03:S01,
@@ -952,7 +1030,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C07:G04:S01,
@@ -975,7 +1055,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS13:C07:G05:S01,
