--- a/inst/extdata/bibset-raw/icus14.bib
+++ b/inst/extdata/bibset-raw/icus14.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS14,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Fourteenth International Conference on the Unity of the Sciences},
@@ -30,7 +32,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Unity of Science: Organization and Change in Complex Systems},
-  chairperson = {Weinberg, Alvin M. and Alonso, Marcelo},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Weinberg, Alvin M. and Alonso, Marcelo},
 }
 
 @Set{ICUS14:C01:G01,
@@ -39,7 +43,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Organization and Change in the Universe},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C01:G01:S01,
@@ -71,7 +77,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Organization and Change in Matter},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C01:G02:S01,
@@ -96,7 +104,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Organization and Change in Living Systems},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C01:G03:S01,
@@ -128,7 +138,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Organization and Change in Social Systems},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C01:G04:S01,
@@ -178,7 +190,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Synthesis and Relationships in Culture},
-  chairperson = {Cappelletti, Vincenzo},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Cappelletti, Vincenzo},
 }
 
 @Set{ICUS14:C02:G01,
@@ -187,7 +201,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C02:G01:S01,
@@ -219,7 +235,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C02:G02:S01,
@@ -243,7 +261,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C02:G03:S01,
@@ -275,7 +295,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C02:G04:S01,
@@ -300,7 +322,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C02:G05:S01,
@@ -319,7 +343,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Forms and Symbols: The Roots of Behavior},
-  chairperson = {Charon, Jean},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Charon, Jean},
 }
 
 @Set{ICUS14:C03:G01,
@@ -328,7 +354,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C03:G01:S01,
@@ -351,7 +379,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C03:G02:S01,
@@ -374,7 +404,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C03:G03:S01,
@@ -403,7 +435,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C03:G05:S01,
@@ -421,7 +455,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Modernization, Appropriate Values and Education},
-  chairperson = {Oxenham, John},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Oxenham, John},
 }
 
 @Set{ICUS14:C04:G01,
@@ -430,7 +466,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C04:G01:S01,
@@ -448,7 +486,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C04:G02:S01,
@@ -465,7 +505,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C04:G03:S01,
@@ -490,7 +532,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C04:G04:S01,
@@ -507,7 +551,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C04:G05:S01,
@@ -526,7 +572,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Search for Unifying Global Philosophy},
-  chairperson = {Smith, Huston and Foster, Durwood},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Smith, Huston and Foster, Durwood},
 }
 
 @Set{ICUS14:C05:G01,
@@ -535,7 +583,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C05:G01:S01,
@@ -566,7 +616,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C05:G02:S01,
@@ -591,7 +643,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C05:G03:S01,
@@ -623,7 +677,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C05:G04:S01,
@@ -648,7 +704,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C05:G05:S01,
@@ -674,7 +732,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Universe and its Origin from Ancient Myth to Present Reality and Fantasy},
-  chairperson = {Singer, S. Fred},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Singer, S. Fred},
 }
 
 @Set{ICUS14:C06:G01,
@@ -683,7 +743,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C06:G01:S01,
@@ -714,7 +776,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C06:G02:S01,
@@ -738,7 +802,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C06:G03:S01,
@@ -769,7 +835,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS14:C06:G04:S01,
