--- a/inst/extdata/bibset-raw/icus16.bib
+++ b/inst/extdata/bibset-raw/icus16.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS16,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Sixteenth International Conference on the Unity of the Sciences},
@@ -30,7 +32,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Unity of the Universe},
-  chairperson = {Lyttleton, Raymond A. and Motz, Lloyd},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lyttleton, Raymond A. and Motz, Lloyd},
 }
 
 @Set{ICUS16:C01:G01,
@@ -39,7 +43,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Origin and Evolution of the Universe},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C01:G01:S01,
@@ -73,7 +79,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Large Scale Structures in the Universe},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C01:G02:S01,
@@ -90,7 +98,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Milky Way},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C01:G03:S01,
@@ -106,7 +116,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Solar Systems and the Earth},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C01:G04:S01,
@@ -123,7 +135,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Life in the Universe},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C01:G05:S01,
@@ -152,7 +166,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Value of Human Life},
-  chairperson = {Smart, Ninian and Badham, Paul},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Smart, Ninian and Badham, Paul},
 }
 
 @Set{ICUS16:C02:G01,
@@ -161,7 +177,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C02:G01:S01,
@@ -185,7 +203,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C02:G02:S01,
@@ -209,7 +229,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C02:G03:S01,
@@ -233,7 +255,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C02:G04:S01,
@@ -257,7 +281,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C02:G05:S01,
@@ -281,7 +307,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C02:G06:S01,
@@ -306,7 +334,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Towards Ecumenism in World Philosophy},
-  chairperson = {Lee, Sang Hun and Foster, A. Durwood},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lee, Sang Hun and Foster, A. Durwood},
 }
 
 @Set{ICUS16:C03:G01,
@@ -315,7 +345,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C03:G01:S01,
@@ -339,7 +371,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C03:G02:S01,
@@ -356,7 +390,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C03:G03:S01,
@@ -380,7 +416,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C03:G04:S01,
@@ -397,7 +435,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C03:G05:S01,
@@ -422,7 +462,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {A Critical Assessment of the Achievements of the Economic Approach},
-  chairperson = {},
+  level = {2},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @Set{ICUS16:C04:G01,
@@ -431,7 +473,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C04:G01:S01,
@@ -455,7 +499,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C04:G02:S01,
@@ -472,7 +518,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C04:G03:S01,
@@ -496,7 +544,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C04:G04:S01,
@@ -513,7 +563,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C04:G05:S01,
@@ -536,7 +588,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Panel Discussants: The Economic Approach Applied to Problems of Science Policy and Technology Policy},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C04:G06:S01,
@@ -565,7 +619,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Human Food Chain: The Problem of Nourishment},
-  chairperson = {King, Alexander and Stanhill, Gerald},
+  level = {2},
+  editorctype={organizer},
+  editorc = {King, Alexander and Stanhill, Gerald},
 }
 
 @Set{ICUS16:C05:G01,
@@ -574,7 +630,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C05:G01:S01,
@@ -602,7 +660,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C05:G02:S01,
@@ -630,7 +690,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C05:G03:S01,
@@ -658,7 +720,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C05:G04:S01,
@@ -686,7 +750,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C05:G05:S01,
@@ -714,7 +780,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C05:G06:S01,
@@ -731,7 +799,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Eastern Approaches to the Unity of Spirit and Matter: Qi and Science},
-  chairperson = {Charon, Jean and Nakagawa, Manabu},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Charon, Jean and Nakagawa, Manabu},
 }
 
 @Set{ICUS16:C06:G01,
@@ -740,7 +810,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Possible Contributions of Qi to Science: An Overview},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C06:G01:S01,
@@ -756,7 +828,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Qi as Empirical Fact},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C06:G02:S01,
@@ -784,7 +858,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Philosophical Significance of Qi in Eastern Thought},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C06:G03:S01,
@@ -812,7 +888,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Physics and Qi: Interaction of Spirit and Matter},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C06:G04:S01,
@@ -840,7 +918,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Qi and View on Nature in Eastern Thought},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C06:G05:S01,
@@ -868,7 +948,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Qi and Physics: Unified Understanding of Spirit and Matter},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C06:G06:S01,
@@ -885,7 +967,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Summary Session},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C06:G07:S01,
@@ -902,7 +986,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {In Search for Understanding Among the Monotheistic Religions},
-  chairperson = {Khadduri, Majid and Patai, Raphael},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Khadduri, Majid and Patai, Raphael},
 }
 
 @Set{ICUS16:C07:G01,
@@ -911,7 +997,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C07:G01:S01,
@@ -945,7 +1033,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C07:G02:S01,
@@ -991,7 +1081,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C07:G03:S01,
@@ -1037,7 +1129,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C07:G04:S01,
@@ -1065,7 +1159,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C07:G05:S01,
@@ -1111,7 +1207,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS16:C07:G06:S01,
