--- a/inst/extdata/bibset-raw/icus17.bib
+++ b/inst/extdata/bibset-raw/icus17.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS17,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Seventeenth International Conference on the Unity of the Sciences},
@@ -32,7 +34,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Evolution of Man},
-  chairperson = {Lowenhard, Percy},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lowenhard, Percy},
 }
 
 @Set{ICUS17:C01:G01,
@@ -41,7 +45,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C01:G01:S01,
@@ -65,7 +71,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C01:G02:S01,
@@ -89,7 +97,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C01:G03:S01,
@@ -113,7 +123,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C01:G04:S01,
@@ -137,7 +149,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C01:G05:S01,
@@ -161,7 +175,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C01:G06:S01,
@@ -186,7 +202,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Ethnocentrism vs. World Unity: Impacts on Socialization and Education},
-  chairperson = {Kozma, Tamas and Schleicher, Klaus},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Kozma, Tamas and Schleicher, Klaus},
 }
 
 @Set{ICUS17:C02:G01,
@@ -195,7 +213,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Behavior and Learning Concepts: Theories and Research Results},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C02:G01:S01,
@@ -229,7 +249,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Methods and Values for Comparison: Concepts and Strategies},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C02:G02:S01,
@@ -263,7 +285,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Ethnocentrism in Education: Case Studies from Europe and America},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C02:G03:S01,
@@ -297,7 +321,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Ethnocentrism in Education: Case Studies from Asia and Africa},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C02:G04:S01,
@@ -331,7 +357,9 @@
   patterntype = {key},
   settype = {Session},
   title = {What Leads Beyond Ethnocentrism: Multicultural Socialization and Education},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C02:G05:S01,
@@ -365,7 +393,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Education Beyond Ethnocentrism: Experiences and Demands on Policy},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C02:G06:S01,
@@ -400,7 +430,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Interdisciplinary Approaches to Development and Modernization},
-  chairperson = {Alonso, Marcelo and Ali, M. Shamsher},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Alonso, Marcelo and Ali, M. Shamsher},
 }
 
 @Set{ICUS17:C03:G01,
@@ -409,7 +441,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Science and Technology Infrastructure in Developing Countries},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C03:G01:S01,
@@ -433,7 +467,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Foreign aid and national development},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C03:G02:S01,
@@ -457,7 +493,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Science and culture},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C03:G03:S01,
@@ -481,7 +519,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Science, Technology and the Basic Needs of Life},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C03:G04:S01,
@@ -505,7 +545,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Ecobalance and Technological Development},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C03:G05:S01,
@@ -529,7 +571,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Science, Technology and Ethical Norms},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C03:G06:S01,
@@ -554,7 +598,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {East-West Perspectives on Spirit and Science},
-  chairperson = {Ravindra, Ravi},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Ravindra, Ravi},
 }
 
 @Set{ICUS17:C04:G01,
@@ -563,7 +609,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C04:G01:S01,
@@ -597,7 +645,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C04:G02:S01,
@@ -637,7 +687,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C04:G03:S01,
@@ -671,7 +723,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C04:G04:S01,
@@ -705,7 +759,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C04:G05:S01,
@@ -740,7 +796,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Eco-Philosophy as a New Metaphysical and Cultural Reconstruction},
-  chairperson = {King, Alexander and Skolimowski, Henryk},
+  level = {2},
+  editorctype={organizer},
+  editorc = {King, Alexander and Skolimowski, Henryk},
 }
 
 @Set{ICUS17:C05:G01,
@@ -749,7 +807,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C05:G01:S01,
@@ -772,7 +832,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C05:G02:S01,
@@ -796,7 +858,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C05:G03:S01,
@@ -820,7 +884,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C05:G04:S01,
@@ -843,7 +909,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C05:G05:S01,
@@ -877,7 +945,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C05:G06:S01,
@@ -902,7 +972,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Neurobiology in Relation to Global Ideology and Values},
-  chairperson = {Mellanby, Kenneth and Delgado, Jose M. R.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth and Delgado, Jose M. R.},
 }
 
 @Set{ICUS17:C06:G01,
@@ -911,7 +983,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Neurobiological Basis of Values},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C06:G01:S01,
@@ -939,7 +1013,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Diversity of Values},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C06:G02:S01,
@@ -967,7 +1043,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Evolution of Ideologies and Values},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C06:G03:S01,
@@ -995,7 +1073,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Global Purpose of Life},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C06:G04:S01,
@@ -1023,7 +1103,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Search for New Solutions},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C06:G05:S01,
@@ -1051,7 +1133,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Guidelines for Global Values},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C06:G06:S01,
@@ -1068,7 +1152,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Ethics of Nuclear Deterrence},
-  chairperson = {Kaplan, Morton A. and Barkenbus, Jack},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Kaplan, Morton A. and Barkenbus, Jack},
 }
 
 @Set{ICUS17:C07:G01,
@@ -1077,7 +1163,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Challenges to Deterrence},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C07:G01:S01,
@@ -1101,7 +1189,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Theological perspectives on just war and nuclear deterrence},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C07:G02:S01,
@@ -1125,7 +1215,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Defenses as an Alternative to Nuclear Deterrence},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C07:G03:S01,
@@ -1149,7 +1241,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Defenses as an Alternative to Nuclear Deterrence (continued)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C07:G04:S01,
@@ -1173,7 +1267,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Values and nuclear deterrence},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C07:G05:S01,
@@ -1197,7 +1293,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Nuclear Deterrence in Developing Countries},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS17:C07:G06:S01,
