--- a/inst/extdata/bibset-raw/icus19.bib
+++ b/inst/extdata/bibset-raw/icus19.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS19,
   title = {Absolute Values and the New World Order},
   titleaddon = {Nineteenth International Conference on the Unity of the Sciences},
@@ -37,7 +39,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Nuclear Option in the Past, Present and in the Future},
-  chairperson = {Weinberg, Alvin M. and Higatsberger, Michael J.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Weinberg, Alvin M. and Higatsberger, Michael J.},
 }
 
 @Set{ICUS19:C01:G01,
@@ -46,7 +50,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Historical Background and Prospects of Nuclear Energy},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C01:G01:S01,
@@ -63,7 +69,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Nuclear Power and the World in Transition},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C01:G02:S01,
@@ -97,7 +105,9 @@
   patterntype = {key},
   settype = {Session},
   title = {What Are the Safety Aspects of Reactor Types?},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C01:G03:S01,
@@ -131,7 +141,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Assessment of Radiological Consequences of the Chernobyl Accident},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C01:G04:S01,
@@ -159,7 +171,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Implication of the 1990 International Commission of Radiological Protection (ICRP) Recommendations.},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C01:G05:S01,
@@ -176,7 +190,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Concept of Non-Proliferation of Nuclear Weapons},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C01:G06:S01,
@@ -194,7 +210,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Global Empowerment of Families},
-  chairperson = {Jerome, Norge Winifred},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Jerome, Norge Winifred},
 }
 
 @Set{ICUS19:C02:G01,
@@ -203,7 +221,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C02:G01:S01,
@@ -227,7 +247,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C02:G02:S01,
@@ -251,7 +273,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C02:G03:S01,
@@ -275,7 +299,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C02:G04:S01,
@@ -299,7 +325,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C02:G05:S01,
@@ -323,7 +351,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C02:G06:S01,
@@ -341,7 +371,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Theoria and Praxis in Unification Thought},
-  chairperson = {Lee, Sang Hun and Rubenstein, Richard L.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lee, Sang Hun and Rubenstein, Richard L.},
 }
 
 @Set{ICUS19:C03:G01,
@@ -350,7 +382,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C03:G01:S01,
@@ -374,7 +408,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C03:G02:S01,
@@ -398,7 +434,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C03:G03:S01,
@@ -422,7 +460,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C03:G04:S01,
@@ -446,7 +486,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C03:G05:S01,
@@ -471,7 +513,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Modern University in Transition},
-  chairperson = {Kozma, Tamas},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Kozma, Tamas},
 }
 
 @Set{ICUS19:C04:G01,
@@ -480,7 +524,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Classical University and Its Transition: Western Europe},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C04:G01:S01,
@@ -514,7 +560,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Research and Teaching at the University: Northern America},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C04:G02:S01,
@@ -542,7 +590,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Confrontation of Values and Modernization: South and East Asia},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C04:G03:S01,
@@ -570,7 +620,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Impact of Colonization: Africa and the Middle East},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C04:G04:S01,
@@ -592,7 +644,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Social movements and the universities: Latin America and the Caribbean},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C04:G05:S01,
@@ -620,7 +674,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Universities in the Political Transition: Eastern Europe},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C04:G06:S01,
@@ -649,7 +705,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Cross-Culturization: The Role of Transportation and Communication},
-  chairperson = {Seitz, Frederick and Singer, S. Fred},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Seitz, Frederick and Singer, S. Fred},
 }
 
 @Set{ICUS19:C05:G01,
@@ -658,7 +716,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C05:G01:S01,
@@ -682,7 +742,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C05:G02:S01,
@@ -706,7 +768,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C05:G03:S01,
@@ -730,7 +794,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C05:G04:S01,
@@ -754,7 +820,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C05:G05:S01,
@@ -772,7 +840,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Values and the Social Order},
-  chairperson = {Radnitzky, Gerard},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Radnitzky, Gerard},
 }
 
 @Set{ICUS19:C06:G01,
@@ -781,7 +851,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Social Sciences are Intrinsically Concerned with Values},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C06:G01:S01,
@@ -805,7 +877,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Social Sciences are Intrinsically Concerned with Values, cont.},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C06:G02:S01,
@@ -829,7 +903,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Values underlying the free society and hence the market order},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C06:G03:S01,
@@ -853,7 +929,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Values underlying the free society and hence the market order, cont.},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C06:G04:S01,
@@ -877,7 +955,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Values underlying the free society and hence the market order, cont.},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C06:G05:S01,
@@ -901,7 +981,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Historical and Geographical Fields of Application of the Free Market},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS19:C06:G06:S01,
