--- a/inst/extdata/bibset-raw/icus20.bib
+++ b/inst/extdata/bibset-raw/icus20.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS20,
   title = {Absolute Values and the Unity of the Sciences: The Origin and Human Responsibility},
   titleaddon = {Twentieth International Conference on the Unity of the Sciences},
@@ -50,7 +52,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Scientific Objectivity and Human Values},
-  chairperson = {Smart, Ninian and Badham, Paul},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Smart, Ninian and Badham, Paul},
 }
 
 @Set{ICUS20:C01:G01,
@@ -59,7 +63,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C01:G01:S01,
@@ -83,7 +89,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C01:G02:S01,
@@ -107,7 +115,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C01:G03:S01,
@@ -131,7 +141,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C01:G04:S01,
@@ -155,7 +167,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C01:G05:S01,
@@ -179,7 +193,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C01:G06:S01,
@@ -204,7 +220,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Genetic Knowledge, Human Values and Human Responsibility},
-  chairperson = {Kegley, Jacquelyn Ann},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Kegley, Jacquelyn Ann},
 }
 
 @Set{ICUS20:C02:G01,
@@ -213,7 +231,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Present Status of Genetic Knowledge - What We Know and What We Don't Know},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C02:G01:S01,
@@ -236,7 +256,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Concepts of ''Genetic Health'' and ''Genetic Disease'' - Do They Make Sense?},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C02:G02:S01,
@@ -260,7 +282,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Present State of Genetic Knowledge and Its Implication for Health Care},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C02:G03:S01,
@@ -284,7 +308,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Treatment of Genetic Disease - Public Health Issues},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C02:G04:S01,
@@ -308,7 +334,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Genetic Knowledge Viewed from Ethnic, Cultural and Religious Perspectives},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C02:G05:S01,
@@ -332,7 +360,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Public Policy for Genetic Knowledge and Its Use},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C02:G06:S01,
@@ -357,7 +387,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Values and the Social Order: Order by Rules and Rules by Order},
-  chairperson = {Radnitzky, Gerard},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Radnitzky, Gerard},
 }
 
 @Set{ICUS20:C03:G01,
@@ -366,7 +398,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Voluntary vs. Coercive Orders: Theory and History},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C03:G01:S01,
@@ -397,7 +431,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Cultural Evolution and Self-Determination},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C03:G02:S01,
@@ -421,7 +457,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Evolution of Morality and of Legal Institutions},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C03:G03:S01,
@@ -445,7 +483,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Forms of Government and Their Consequences},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C03:G04:S01,
@@ -469,7 +509,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Escapes from Coercive Orders to Voluntary Orders},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C03:G05:S01,
@@ -492,7 +534,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Regional and Functional Federalism Facilitates Freedom},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C03:G06:S01,
@@ -517,7 +561,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Science, Nature and the Sacred},
-  chairperson = {Ravindra, Ravi and Murray, Priscilla},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Ravindra, Ravi and Murray, Priscilla},
 }
 
 @Set{ICUS20:C04:G01,
@@ -526,7 +572,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Science and the Sacred},
-  chairperson = {Murray, Priscilla},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Murray, Priscilla},
 }
 
 @InProceedings{ICUS20:C04:G01:S01,
@@ -548,7 +596,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Perspectives from History},
-  chairperson = {Sudarshan, George},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Sudarshan, George},
 }
 
 @InProceedings{ICUS20:C04:G02:S01,
@@ -570,7 +620,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Views from the Physical Sciences},
-  chairperson = {Ravindra, Ravi},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ravindra, Ravi},
 }
 
 @InProceedings{ICUS20:C04:G03:S01,
@@ -598,7 +650,9 @@
   patterntype = {key},
   settype = {Session},
   title = {From the Psychology of Science},
-  chairperson = {Krishna, Padmanabahn},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Krishna, Padmanabahn},
 }
 
 @InProceedings{ICUS20:C04:G04:S01,
@@ -626,7 +680,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Studies of Consciousness},
-  chairperson = {Quadens, Olga},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Quadens, Olga},
 }
 
 @InProceedings{ICUS20:C04:G05:S01,
@@ -648,7 +704,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Other Significant Perspectives},
-  chairperson = {Lagmay, Alfredo},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lagmay, Alfredo},
 }
 
 @InProceedings{ICUS20:C04:G06:S01,
@@ -677,7 +735,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Re-visioning the Aging Society: A Global Perspective},
-  chairperson = {Moody, Harry R.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Moody, Harry R.},
 }
 
 @Set{ICUS20:C05:G01,
@@ -686,7 +746,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Population Aging: a Surprise-free Forecast},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C05:G01:S01,
@@ -708,7 +770,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Population Aging: a Surprise-free Forecast},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C05:G02:S01,
@@ -730,7 +794,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Strong Face of Age: A Paradigm Shift},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C05:G03:S01,
@@ -752,7 +818,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Strong Face of Age: A Paradigm Shift / Practical Utopias},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C05:G04:S01,
@@ -774,7 +842,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Practical Utopias},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C05:G05:S01,
@@ -796,7 +866,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Practical Utopias},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C05:G06:S01,
@@ -825,7 +897,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {In Pursuit of Beauty: Biological Foundations of Aesthetics},
-  chairperson = {Turner, Frederick},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Turner, Frederick},
 }
 
 @Set{ICUS20:C06:G01,
@@ -834,7 +908,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Anthropology of Aesthetics},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C06:G01:S01,
@@ -862,7 +938,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Biological adaptations and norms in the arts},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C06:G02:S01,
@@ -884,7 +962,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Evolutionary significance of tragedy and monster tales},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C06:G03:S01,
@@ -906,7 +986,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Left and Right Sides of the Brain},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C06:G04:S01,
@@ -928,7 +1010,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The aesthetics of complexity},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C06:G05:S01,
@@ -950,7 +1034,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Spiritual implications of bioaesthetics},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C06:G06:S01,
@@ -979,7 +1065,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Towards the Harmony of Cultures},
-  chairperson = {Lee, Sang Hun and Sontag, Frederick},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lee, Sang Hun and Sontag, Frederick},
 }
 
 @Set{ICUS20:C07:G01,
@@ -988,7 +1076,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C07:G01:S01,
@@ -1016,7 +1106,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C07:G02:S01,
@@ -1044,7 +1136,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C07:G03:S01,
@@ -1072,7 +1166,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C07:G04:S01,
@@ -1101,7 +1197,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C07:G05:S01,
@@ -1129,7 +1227,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C07:G06:S01,
@@ -1157,7 +1257,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS20:C07:G07:S01,
