--- a/inst/extdata/bibset-raw/icus21.bib
+++ b/inst/extdata/bibset-raw/icus21.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS21,
   title = {Absolute Values and the Unity of the Sciences: Science for the Benefit of Humanity},
   titleaddon = {Twenty-first International Conference on the Unity of the Sciences},
@@ -37,7 +39,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Information Revolution, Higher Education, and Research},
-  chairperson = {Alonso, Marcelo},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Alonso, Marcelo},
 }
 
 @Set{ICUS21:C01:G01,
@@ -46,7 +50,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Information Technologies and Higher Education},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C01:G01:S01,
@@ -80,7 +86,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Information Technology and Inter-institutional Collaboration},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C01:G02:S01,
@@ -114,7 +122,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Information Technologies and Research},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C01:G03:S01,
@@ -148,7 +158,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Information Technologies and Tele-Education},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C01:G04:S01,
@@ -182,7 +194,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Symmetry in its Various Aspects: Search for Order in the Universe},
-  chairperson = {Ne'eman, Yuval and Atalay, Bulent},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Ne'eman, Yuval and Atalay, Bulent},
 }
 
 @Set{ICUS21:C02:G01,
@@ -191,7 +205,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Mathematics},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C02:G01:S01,
@@ -213,7 +229,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Physics},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C02:G02:S01,
@@ -235,7 +253,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Chemistry},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C02:G03:S01,
@@ -257,7 +277,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C02:G04:S01,
@@ -279,7 +301,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Social sciences},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C02:G05:S01,
@@ -307,7 +331,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C02:G06:S01,
@@ -330,7 +356,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Human Universals and the Biological Foundations of Art},
-  chairperson = {Turner, Frederick and Cooke, Brett},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Turner, Frederick and Cooke, Brett},
 }
 
 @Set{ICUS21:C03:G01,
@@ -339,7 +367,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Native American},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C03:G01:S01,
@@ -361,7 +391,9 @@
   patterntype = {key},
   settype = {Session},
   title = {New Guinean},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C03:G02:S01,
@@ -389,7 +421,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Australoid and African},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C03:G03:S01,
@@ -411,7 +445,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Russian},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C03:G04:S01,
@@ -439,7 +475,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Literate Popular Culture},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C03:G05:S01,
@@ -467,7 +505,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Non-linear Perspectives},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C03:G06:S01,
@@ -496,7 +536,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Treatment of Non-linear Systems in Physics and Economics},
-  chairperson = {Velikhov, Eugene},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Velikhov, Eugene},
 }
 
 @Set{ICUS21:C04:G01,
@@ -505,7 +547,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C04:G01:S01,
@@ -527,7 +571,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C04:G02:S01,
@@ -549,7 +595,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C04:G03:S01,
@@ -571,7 +619,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C04:G04:S01,
@@ -593,7 +643,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C04:G05:S01,
@@ -615,7 +667,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C04:G06:S01,
@@ -637,7 +691,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C04:G07:S01,
@@ -654,7 +710,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Wholeness Through the Pathways of Wisdom},
-  chairperson = {Achenbaum, W. Andrew},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Achenbaum, W. Andrew},
 }
 
 @Set{ICUS21:C05:G01,
@@ -663,7 +721,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Part 1: Wisdom Across Faith Traditions},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C05:G01:S01,
@@ -685,7 +745,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Part 1: Wisdom Across Faith Traditions},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C05:G02:S01,
@@ -707,7 +769,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Part 2: Faith, Ethics and Healing},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C05:G03:S01,
@@ -729,7 +793,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Part 2: Faith, Ethics and Healing},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C05:G04:S01,
@@ -751,7 +817,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Part 3: Toward a New Synthesis (and Beyond?)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C05:G05:S01,
@@ -779,7 +847,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Part 3: Toward a New Synthesis (and Beyond?)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C05:G06:S01,
@@ -802,7 +872,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Life, Death and Eternal Hope},
-  chairperson = {Becker, Carl and Badham, Paul},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Becker, Carl and Badham, Paul},
 }
 
 @Set{ICUS21:C06:G01,
@@ -811,7 +883,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C06:G01:S01,
@@ -835,7 +909,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C06:G02:S01,
@@ -859,7 +935,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C06:G03:S01,
@@ -883,7 +961,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C06:G04:S01,
@@ -907,7 +987,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C06:G05:S01,
@@ -931,7 +1013,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C06:G06:S01,
@@ -955,7 +1039,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C06:G07:S01,
@@ -973,7 +1059,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Constructing Theories for a Coming Age of Global Family},
-  chairperson = {Jin, Sung-Bae and Burr, Ronald},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Jin, Sung-Bae and Burr, Ronald},
 }
 
 @Set{ICUS21:C07:G01,
@@ -982,7 +1070,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Detente for Religion and Science},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C07:G01:S01,
@@ -1010,7 +1100,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Theories of Evolution and Creation},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C07:G02:S01,
@@ -1032,7 +1124,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Theoretical Heirs of Socialism and Capitalism},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C07:G03:S01,
@@ -1054,7 +1148,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Re-construction of the Concept of the Family and the Value Set Associated with It},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C07:G04:S01,
@@ -1076,7 +1172,9 @@
   patterntype = {key},
   settype = {Session},
   title = {North-South Issues, Including Equalization of Technology},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C07:G05:S01,
@@ -1098,7 +1196,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Harmony of Humans-in-Nature},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C07:G06:S01,
@@ -1120,7 +1220,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Harmony Among Religious Traditions},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS21:C07:G07:S01,
