--- a/inst/extdata/bibset-raw/icus22.bib
+++ b/inst/extdata/bibset-raw/icus22.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS22,
   title = {Absolute Values and the Unity of the Sciences: Science for the Benefit of Humanity},
   titleaddon = {Twenty-second International Conference on the Unity of the Sciences},
@@ -18,7 +20,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Symmetry in its Various Aspects},
-  chairperson = {Nagy, Denes and Atalay, Bulent I.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Nagy, Denes and Atalay, Bulent I.},
 }
 
 @Set{ICUS22:C01:G01,
@@ -27,7 +31,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C01:G01:S01,
@@ -49,7 +55,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C01:G02:S01,
@@ -71,7 +79,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C01:G03:S01,
@@ -93,7 +103,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C01:G05:S01,
@@ -115,7 +127,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C01:G06:S01,
@@ -137,7 +151,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C01:G07:S01,
@@ -154,7 +170,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Holistic Medicine in Modern Health Care},
-  chairperson = {Jerome, Norge W. and Becker, Carl},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Jerome, Norge W. and Becker, Carl},
 }
 
 @Set{ICUS22:C02:G01,
@@ -163,7 +181,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C02:G01:S01,
@@ -179,7 +199,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C02:G02:S01,
@@ -201,7 +223,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C02:G03:S01,
@@ -223,7 +247,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C02:G05:S01,
@@ -246,7 +272,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C02:G06:S01,
@@ -269,7 +297,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Threat of Epidemics},
-  chairperson = {Brøgger, Jan},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Brøgger, Jan},
 }
 
 @Set{ICUS22:C03:G01,
@@ -278,7 +308,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C03:G01:S01,
@@ -300,7 +332,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C03:G02:S01,
@@ -322,7 +356,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C03:G03:S01,
@@ -338,7 +374,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C03:G05:S01,
@@ -360,7 +398,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C03:G06:S01,
@@ -383,7 +423,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Military and Police - Public or Private? Explorations in the Theory and History of Security Production},
-  chairperson = {Radnitzky, Gerard and Hoppe, Hans-Hermann},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Radnitzky, Gerard and Hoppe, Hans-Hermann},
 }
 
 @Set{ICUS22:C04:G01,
@@ -392,7 +434,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C04:G01:S01,
@@ -408,7 +452,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C04:G02:S01,
@@ -430,7 +476,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C04:G03:S01,
@@ -452,7 +500,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C04:G05:S01,
@@ -474,7 +524,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C04:G06:S01,
@@ -496,7 +548,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C04:G07:S01,
@@ -513,7 +567,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Non-linear Structures in Natural Science and Economics},
-  chairperson = {Alonso, Marcelo and Kingsep, Alexander},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Alonso, Marcelo and Kingsep, Alexander},
 }
 
 @Set{ICUS22:C05:G01,
@@ -522,7 +578,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C05:G01:S01,
@@ -544,7 +602,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C05:G02:S01,
@@ -566,7 +626,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C05:G03:S01,
@@ -588,7 +650,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C05:G04:S01,
@@ -610,7 +674,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C05:G05:S01,
@@ -632,7 +698,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C05:G06:S01,
@@ -654,7 +722,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C05:G07:S01,
@@ -677,7 +747,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Science and Music: A Unifying Concept},
-  chairperson = {Daudel, Raymond and Maruani, Jean and Rantanen, Marja},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Daudel, Raymond and Maruani, Jean and Rantanen, Marja},
 }
 
 @Set{ICUS22:C06:G01,
@@ -686,7 +758,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G01:S01,
@@ -708,7 +782,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G02:S01,
@@ -724,7 +800,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G03:S01,
@@ -746,7 +824,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G04:S01,
@@ -768,7 +848,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G05:S01,
@@ -790,7 +872,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G06:S01,
@@ -812,7 +896,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G07:S01,
@@ -834,7 +920,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS22:C06:G08:S01,
