--- a/inst/extdata/bibset-raw/icus06.bib
+++ b/inst/extdata/bibset-raw/icus06.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS06,
   title = {The Search for Absolute Values in a Changing World},
   titleaddon = {The Sixth International Conference on the Unity of the Sciences},
@@ -66,7 +68,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Religion and Philosophy},
-  chairperson = {Rubenstein, Richard L.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Rubenstein, Richard L.},
 }
 
 @Set{ICUS06:C01:G01,
@@ -75,7 +79,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Philosophies as Alternative Modes of Social Praxis},
-  chairperson = {Naess, Arne},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Naess, Arne},
 }
 
 @InProceedings{ICUS06:C01:G01:S01,
@@ -107,7 +113,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Comparative Religious Responses to Modernization},
-  author = {Kaufmann, Walter},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kaufmann, Walter},
 }
 
 @InProceedings{ICUS06:C01:G02:S01,
@@ -139,7 +147,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Religion and Society},
-  chairperson = {Rumscheidt, H. Martin},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Rumscheidt, H. Martin},
 }
 
 @InProceedings{ICUS06:C01:G03:S01,
@@ -175,7 +185,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Religion and Science},
-  chairperson = {Ferré, Frederick},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ferré, Frederick},
 }
 
 @InProceedings{ICUS06:C01:G04:S01,
@@ -207,7 +219,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Social Sciences},
-  chairperson = {Lerner, Daniel},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lerner, Daniel},
 }
 
 @Set{ICUS06:C02:G01,
@@ -216,7 +230,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Intercultural Communication in a Changing World},
-  chairperson = {Rao, Y. V. L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Rao, Y. V. L.},
 }
 
 @InProceedings{ICUS06:C02:G01:S01,
@@ -245,7 +261,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Values, Policy and the Control of Violence},
-  chairperson = {Ferracuti, Franco},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ferracuti, Franco},
 }
 
 @InProceedings{ICUS06:C02:G02:S01,
@@ -280,7 +298,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Projecting a New Economic World Order},
-  chairperson = {Hauser, Philip M.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Hauser, Philip M.},
 }
 
 @InProceedings{ICUS06:C02:G03:S01,
@@ -314,7 +334,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Shaping a New Political World Order},
-  chairperson = {Schacter, Oscar},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Schacter, Oscar},
 }
 
 @InProceedings{ICUS06:C02:G04:S01,
@@ -342,7 +364,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Life Sciences},
-  chairperson = {Mellanby, Kenneth},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @Set{ICUS06:C03:G01,
@@ -351,7 +375,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Ethics of Research on Recombinant DNA},
-  chairperson = {Villee Jr, Claude A.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Villee Jr, Claude A.},
 }
 
 @InProceedings{ICUS06:C03:G01:X01,
@@ -368,7 +394,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Health Care as a Global Problem: Social and Behavioral Aspects},
-  chairperson = {Brown, Edwin W.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Brown, Edwin W.},
 }
 
 @InProceedings{ICUS06:C03:G02:S01,
@@ -406,7 +434,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Health Care as a Global Problem in Our Changing World},
-  chairperson = {Ambrus, Julian L.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ambrus, Julian L.},
 }
 
 @InProceedings{ICUS06:C03:G03:S01,
@@ -438,7 +468,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Biological foundation of altruism, dedication and egoism},
-  chairperson = {Somit, Albert},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Somit, Albert},
 }
 
 @InProceedings{ICUS06:C03:G04:S01,
@@ -470,7 +502,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Physical Sciences},
-  chairperson = {Wigner, Eugene P.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Wigner, Eugene P.},
 }
 
 @Set{ICUS06:C04:G01,
@@ -479,7 +513,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Limits of Science},
-  author = {Toll, John S.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Toll, John S.},
 }
 
 @InProceedings{ICUS06:C04:G01:S01,
@@ -504,7 +540,9 @@
   patterntype = {key},
   settype = {Group},
   title = {A Consideration of the Universe as a Whole},
-  chairperson = {Ne'eman, Yuval},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ne'eman, Yuval},
 }
 
 @InProceedings{ICUS06:C04:G02:S01,
@@ -529,7 +567,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Brain-Mind Problem in Relation to the Physical Sciences},
-  chairperson = {Pribram, Karl H.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Pribram, Karl H.},
 }
 
 @InProceedings{ICUS06:C04:G03:S01,
@@ -561,7 +601,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Boundaries of Science and Technology},
-  chairperson = {Jammer, Max},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jammer, Max},
 }
 
 @InProceedings{ICUS06:C04:G04:S01,
@@ -593,7 +635,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Media Freedom and Responsibility},
-  chairperson = {Moses, Charles},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Moses, Charles},
 }
 
 @InProceedings{ICUS06:C05:G01:S01,
@@ -610,7 +654,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Death and the Meaning of Life},
-  chairperson = {Hick, John},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Hick, John},
 }
 
 @InProceedings{ICUS06:C05:G02:S01,
@@ -638,7 +684,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Relationship of Government and Business to the Individual in Democratic and Totalitarian Systems},
-  moderator = {Lamberton, Donald McL.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Lamberton, Donald McL.},
 }
 
 @InProceedings{ICUS06:C05:G03:S01,
@@ -655,7 +703,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Ways and Means of Multidisciplinary Studies},
-  moderator = {Jones, Reginald V.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Jones, Reginald V.},
 }
 
 @InProceedings{ICUS06:C05:G04:S01,
@@ -689,7 +739,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Science as an experience of the absolute: religious and moral implications of research},
-  moderator = {Bardis, Panos D.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Bardis, Panos D.},
 }
 
 @InProceedings{ICUS06:C05:G05:S01,
@@ -706,7 +758,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Future of Humanity in a World of Finite Resources},
-  moderator = {Taylor, Alastair M.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Taylor, Alastair M.},
 }
 
 @InProceedings{ICUS06:C05:G06:S01,
@@ -723,7 +777,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Scientific Research and Enquiry: Ivory Tower or the Market Place, Slaughterhouse or Shangri-La?},
-  moderator = {Butros, Albert},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Butros, Albert},
 }
 
 @InProceedings{ICUS06:C05:G07:S01,
@@ -740,7 +796,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Future of the Family: a Cross-Cultural Perspective},
-  moderator = {Sussman, Marvin B.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Sussman, Marvin B.},
 }
 
 @InProceedings{ICUS06:C05:G08:S01,
@@ -768,7 +826,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {How Can Atomic Energy Help Man's Future?},
-  moderator = {Atalay, Bulent},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Atalay, Bulent},
 }
 
 @InProceedings{ICUS06:C05:G09:S01,
@@ -790,7 +850,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Alienation and Identification},
-  moderator = {Segre, Dan V.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Segre, Dan V.},
 }
 
 @InProceedings{ICUS06:C05:G10:S01,
@@ -807,7 +869,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {Systematic Interrelations of Different Types of Value},
-  moderator = {Szalai, Alexander},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Szalai, Alexander},
 }
 
 @InProceedings{ICUS06:C05:G11:S01,
@@ -841,7 +905,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Role of Education in Imparting Values},
-  moderator = {Brasted, Robert C.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Brasted, Robert C.},
 }
 
 @InProceedings{ICUS06:C05:G12:S01,
@@ -865,7 +931,9 @@
   patterntype = {key},
   settype = {Discussion},
   title = {The Social Meaning of Artistic Creativity},
-  moderator = {Goldsmith, Maurice},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Goldsmith, Maurice},
 }
 
 @InProceedings{ICUS06:C05:G13:S01,
