--- a/inst/extdata/bibset-raw/icus10.bib
+++ b/inst/extdata/bibset-raw/icus10.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS10,
   title = {The Search for Absolute Values and the Creation of the New World},
   titleaddon = {Tenth International Conference on the Unity of the Sciences},
@@ -32,7 +34,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Comparative Development: The Present},
-  chairperson = {Golden, John},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Golden, John},
 }
 
 @Set{ICUS10:C01:G01,
@@ -41,7 +45,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Resource-Deficient Newly Industrial Nations},
-  chairperson = {Koo, Bon Ho},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Koo, Bon Ho},
 }
 
 @InProceedings{ICUS10:C01:G01:S01,
@@ -66,7 +72,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Resource-Exporting Developing Nations},
-  chairperson = {Sakr, Mohamed Ahmed},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Sakr, Mohamed Ahmed},
 }
 
 @InProceedings{ICUS10:C01:G02:S01,
@@ -98,7 +106,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Industrial Veterans},
-  chairperson = {Harriss, C. Lowell},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Harriss, C. Lowell},
 }
 
 @InProceedings{ICUS10:C01:G03:S01,
@@ -133,7 +143,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Less Developed Countries: In Risk of Chronic Poverty},
-  chairperson = {Srinivasan, Mangalam},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Srinivasan, Mangalam},
 }
 
 @InProceedings{ICUS10:C01:G04:S01,
@@ -159,7 +171,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Technology and Society in Transition},
-  chairperson = {Weinberg, Alvin M.},
+  level = {2,
+  editorctype={organizer},
+  editorc = {Weinberg, Alvin M.},
 }
 
 @Set{ICUS10:C02:G01,
@@ -168,7 +182,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Energy},
-  chairperson = {Fukuda, Nobuyuki},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Fukuda, Nobuyuki},
 }
 
 @InProceedings{ICUS10:C02:G01:S01,
@@ -205,7 +221,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Information},
-  chairperson = {Williamson, D. T. N.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Williamson, D. T. N.},
 }
 
 @InProceedings{ICUS10:C02:G02:S01,
@@ -235,7 +253,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Materials},
-  chairperson = {Kurti, Nicholas},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kurti, Nicholas},
 }
 
 @InProceedings{ICUS10:C02:G03:S01,
@@ -270,7 +290,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Broader Implications},
-  chairperson = {Ayres, Robert U.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Ayres, Robert U.},
 }
 
 @InProceedings{ICUS10:C02:G05:S02,
@@ -300,7 +322,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Future of Technology and Society},
-  chairperson = {Mellanby, Kenneth},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Mellanby, Kenneth},
 }
 
 @Set{ICUS10:C03:G01,
@@ -309,7 +333,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Changing Role of Science},
-  chairperson = {Gerholm, Tor Ragnor},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Gerholm, Tor Ragnor},
 }
 
 @InProceedings{ICUS10:C03:G01:S01,
@@ -335,7 +361,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Developments of Technology and their Consequences},
-  chairperson = {Silverman, Joseph},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Silverman, Joseph},
 }
 
 @InProceedings{ICUS10:C03:G02:S01,
@@ -368,7 +396,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Population and Social Patterns},
-  chairperson = {{Villee Jr}, Claude A.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {{Villee Jr}, Claude A.},
 }
 
 @InProceedings{ICUS10:C03:G04:S01,
@@ -404,7 +434,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Transformations of the Individual in Society},
-  chairperson = {Rubenstein, Richard L.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Rubenstein, Richard L.},
 }
 
 @Set{ICUS10:C04:G01,
@@ -413,7 +445,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Approaches to Health and Healing - East and West},
-  chairperson = {Feinendegen, Ludwig E.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Feinendegen, Ludwig E.},
 }
 
 @InProceedings{ICUS10:C04:G01:S01,
@@ -453,7 +487,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Resurgence of East Asia: Promises and Pitfalls of Modernization},
-  chairperson = {Kim, Ilpyong J.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Kim, Ilpyong J.},
 }
 
 @InProceedings{ICUS10:C04:G03:S01,
@@ -489,7 +525,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Resurgence of East Asia: Cultural and Spiritual Dimensions},
-  chairperson = {Wescott, Roger W.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Wescott, Roger W.},
 }
 
 @InProceedings{ICUS10:C04:G04:S01,
@@ -522,7 +560,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Supranational Movements: Launch Point 1981},
-  chairperson = {{Al Faruqi}, Isma'il R.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {{Al Faruqi}, Isma'il R.},
 }
 
 @InProceedings{ICUS10:C04:G05:S01,
@@ -558,7 +598,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Transformations in Consciousness},
-  chairperson = {Pribram, Karl H.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Pribram, Karl H.},
 }
 
 @Set{ICUS10:C05:G02,
@@ -567,7 +609,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Origins of Human Thought},
-  chairperson = {McGuinness, Diane},
+  level = {3},
+  editorctype={organizer},
+  editorc = {McGuinness, Diane},
 }
 
 @InProceedings{ICUS10:C05:G02:S01,
@@ -597,7 +641,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Transformations of Philosophical Thought: Recent Contributions},
-  chairperson = {Bartley, William Warren III},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Bartley, William Warren III},
 }
 
 @InProceedings{ICUS10:C05:G03:S01,
@@ -633,7 +679,9 @@
   patterntype = {key},
   settype = {Group},
   title = {Transformation of Scientific Thought: Recent Contributions},
-  chairperson = {Galantay, Ervin Y.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Galantay, Ervin Y.},
 }
 
 @InProceedings{ICUS10:C05:G04:S01,
@@ -669,7 +717,9 @@
   patterntype = {key},
   settype = {Group},
   title = {The Future of Consciousness},
-  chairperson = {Rauscher, Elizabeth A.},
+  level = {3},
+  editorctype={organizer},
+  editorc = {Rauscher, Elizabeth A.},
 }
 
 @InProceedings{ICUS10:C05:G05:S01,
