--- a/inst/extdata/bibset-raw/icus15.bib
+++ b/inst/extdata/bibset-raw/icus15.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS15,
   title = {Absolute Values and the New Cultural Revolution},
   titleaddon = {Fifteenth International Conference on the Unity of the Sciences},
@@ -30,7 +32,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Unifying Principles in the Science},
-  chairperson = {Wigner, Eugene P. and Alonso, Marcelo},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Wigner, Eugene P. and Alonso, Marcelo},
 }
 
 @Set{ICUS15:C01:G01,
@@ -39,7 +43,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Symmetry},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C01:G01:S01,
@@ -73,7 +79,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Space-Time},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C01:G02:S01,
@@ -107,7 +115,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Energy},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C01:G03:S01,
@@ -141,7 +151,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Entropy},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C01:G04:S01,
@@ -175,7 +187,9 @@
   patterntype = {key},
   settype = {Session},
   title = {},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C01:G05:S01,
@@ -192,7 +206,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Value of Human Life},
-  chairperson = {{Villee Jr}, Claude A. and Badham, Paul},
+  level = {2},
+  editorctype={organizer},
+  editorc = {{Villee Jr}, Claude A. and Badham, Paul},
 }
 
 @Set{ICUS15:C02:G01,
@@ -201,7 +217,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C02:G01:S01,
@@ -225,7 +243,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C02:G02:S01,
@@ -249,7 +269,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C02:G03:S01,
@@ -273,7 +295,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C02:G04:S01,
@@ -297,7 +321,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C02:G05:S01,
@@ -321,7 +347,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C02:G06:S01,
@@ -346,7 +374,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Toward Ecumenism in World Philosophy},
-  chairperson = {Lee, Sang Hun and Foster, A. Durwood},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lee, Sang Hun and Foster, A. Durwood},
 }
 
 @Set{ICUS15:C03:G01,
@@ -355,7 +385,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C03:G01:S01,
@@ -378,7 +410,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C03:G02:S01,
@@ -402,7 +436,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C03:G03:S01,
@@ -419,7 +455,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C03:G04:S01,
@@ -442,7 +480,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C03:G05:S01,
@@ -466,7 +506,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C03:G06:S01,
@@ -491,7 +533,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Relationship Between Science and the Arts and its Relevance to Cultural Transformation},
-  chairperson = {Gerholm, Tor Ragnor and Goldsmith, Maurice},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Gerholm, Tor Ragnor and Goldsmith, Maurice},
 }
 
 @Set{ICUS15:C04:G01,
@@ -500,7 +544,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C04:G01:S01,
@@ -522,7 +568,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C04:G02:S01,
@@ -544,7 +592,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C04:G03:S01,
@@ -566,7 +616,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C04:G04:S01,
@@ -588,7 +640,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C04:G05:S01,
@@ -610,7 +664,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C04:G06:S01,
@@ -627,7 +683,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Problems of the Third World: The Case of Africa},
-  chairperson = {Ohin, Alexandre J. and Knappert, Jan},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Ohin, Alexandre J. and Knappert, Jan},
 }
 
 @Set{ICUS15:C05:G01,
@@ -636,7 +694,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Introductions},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C05:G01:S01,
@@ -658,7 +718,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Environment},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C05:G02:S01,
@@ -681,7 +743,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Nature},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C05:G03:S01,
@@ -704,7 +768,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Land},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C05:G04:S01,
@@ -728,7 +794,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Society},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C05:G05:S01,
@@ -751,7 +819,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Education},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C05:G06:S01,
@@ -775,7 +845,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Politics},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C05:G07:S01,
@@ -807,7 +879,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Eastern Approaches to Knowledge and Values: With an Emphasis on 'Qi'},
-  chairperson = {Nakagawa, Manabu},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Nakagawa, Manabu},
 }
 
 @Set{ICUS15:C06:G01,
@@ -816,7 +890,9 @@
   patterntype = {key},
   settype = {Session},
   title = {An Eastern Approach to Psychological Knowledge},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C06:G01:S01,
@@ -833,7 +909,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Concept of Qi},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C06:G02:S01,
@@ -857,7 +935,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Qi and Yoga},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C06:G03:S01,
@@ -874,7 +954,9 @@
   patterntype = {key},
   settype = {Session},
   title = {West Encounters with Eastern Qi},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C06:G04:S01,
@@ -898,7 +980,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Practice of Qi: Theoretical Basis},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C06:G05:S01,
@@ -922,7 +1006,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Practice of Qi: Medical Application},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C06:G06:S01,
@@ -941,7 +1027,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Global 2000 Revisited: Reassessing Man's Impact on Spaceship Earth},
-  chairperson = {Singer, S. Fred and Ellsaesser, Hugh},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Singer, S. Fred and Ellsaesser, Hugh},
 }
 
 @Set{ICUS15:C07:G01,
@@ -950,7 +1038,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C07:G01:S01,
@@ -973,7 +1063,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C07:G02:S01,
@@ -1003,7 +1095,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C07:G03:S01,
@@ -1027,7 +1121,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C07:G04:S01,
@@ -1050,7 +1146,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C07:G05:S01,
@@ -1073,7 +1171,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS15:C07:G06:S01,
