--- a/inst/extdata/bibset-raw/icus18.bib
+++ b/inst/extdata/bibset-raw/icus18.bib
@@ -1,3 +1,5 @@
+icus.data Data Version 0.8.0
+
 @Proceedings{ICUS18,
   title = {Absolute Values and the Reassessment of the Contemporary World},
   titleaddon = {Eighteenth International Conference on the Unity of the Sciences},
@@ -31,7 +33,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Limits of Science?},
-  chairperson = {Chou, Kyong-Chol and Marx, George},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Chou, Kyong-Chol and Marx, George},
 }
 
 @Set{ICUS18:C01:G01,
@@ -40,7 +44,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Space-Time Limits},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C01:G01:S01,
@@ -74,7 +80,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Conceptual Limits},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C01:G02:S01,
@@ -91,7 +99,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Complexity Limits},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C01:G03:S01,
@@ -115,7 +125,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Scientists' Limits},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C01:G04:S01,
@@ -139,7 +151,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Policy Limits},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C01:G05:S01,
@@ -162,7 +176,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Societal Limits},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C01:G06:S01,
@@ -180,7 +196,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Agricultural Genetic Engineering and Society},
-  chairperson = {{Villee Jr}, Claude A.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {{Villee Jr}, Claude A.},
 }
 
 @Set{ICUS18:C02:G01,
@@ -189,7 +207,9 @@
   patterntype = {key},
   settype = {Session},
   title = {},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C02:G01:S01,
@@ -214,7 +234,9 @@
   patterntype = {key},
   settype = {Session},
   title = {},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C02:G02:S01,
@@ -238,7 +260,9 @@
   patterntype = {key},
   settype = {Session},
   title = {},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C02:G03:S01,
@@ -262,7 +286,9 @@
   patterntype = {key},
   settype = {Session},
   title = {},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C02:G04:S01,
@@ -286,7 +312,9 @@
   patterntype = {key},
   settype = {Session},
   title = {},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C02:G05:S01,
@@ -310,7 +338,9 @@
   patterntype = {key},
   settype = {Session},
   title = {},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C02:G06:S01,
@@ -335,7 +365,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Nationalism and World Unity: Educating for the 21st Century},
-  chairperson = {Schleicher, Klaus and Kozma, Tamas},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Schleicher, Klaus and Kozma, Tamas},
 }
 
 @Set{ICUS18:C03:G01,
@@ -344,7 +376,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Introduction},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G01:S01,
@@ -360,7 +394,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Context of Nationalism in Education},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G02:S01,
@@ -393,7 +429,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Comparison of Nationalism and Internationalism in Rducation: the Industrialized Countries},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G03:S01,
@@ -427,7 +465,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Comparison of Nationalism and Internationalism in Education: The Developing Countries; and Beyond Educational Nationalism},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G04:S01,
@@ -473,7 +513,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Nationalism in Education: East Asia (Case Studies 1)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G05:S01,
@@ -501,7 +543,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Nationalism in Education: Eastern Europe and the Middle East (Case Studies 2)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G06:S01,
@@ -535,7 +579,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Nationalism in Education: Eastern Europe and the Soviet Union (Case Studies 3)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G07:S01,
@@ -569,7 +615,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Summary Session},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C03:G08:S01,
@@ -586,7 +634,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {The Contemporary Family in Cross-Cultural Context},
-  chairperson = {Jerome, Norge Winifred},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Jerome, Norge Winifred},
 }
 
 @Set{ICUS18:C04:G01,
@@ -595,7 +645,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Family and Contemporary Society},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C04:G01:S01,
@@ -619,7 +671,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Family and Contemporary Society (cont.)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C04:G02:S01,
@@ -643,7 +697,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Family and Contemporary Society (cont.)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C04:G03:S01,
@@ -667,7 +723,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Values Transmission},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C04:G04:S01,
@@ -691,7 +749,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Social Group Integration},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C04:G05:S01,
@@ -715,7 +775,9 @@
   patterntype = {key},
   settype = {Session},
   title = {The Impact of Immigration on Hispanic Families},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C04:G06:S01,
@@ -733,7 +795,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {East-West Perspectives on Science and Spirit: Time and Consciousness},
-  chairperson = {Gregorios, Paulos Mar and Ravindra, Ravi},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Gregorios, Paulos Mar and Ravindra, Ravi},
 }
 
 @Set{ICUS18:C05:G01,
@@ -742,7 +806,9 @@
   patterntype = {key},
   settype = {Session},
   title = {Introductory Session},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C05:G01:S01,
@@ -758,7 +824,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C05:G02:S01,
@@ -793,7 +861,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C05:G03:S01,
@@ -827,7 +897,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C05:G04:S01,
@@ -861,7 +933,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C05:G05:S01,
@@ -895,7 +969,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C05:G06:S01,
@@ -929,7 +1005,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C05:G07:S01,
@@ -946,7 +1024,9 @@
   patterntype = {key},
   settype = {Committee},
   title = {Unification Thought and the Global Transformation of Consciousness},
-  chairperson = {Lee, Sang Hun and Rubenstein, Richard L.},
+  level = {2},
+  editorctype={organizer},
+  editorc = {Lee, Sang Hun and Rubenstein, Richard L.},
 }
 
 @Set{ICUS18:C06:G01,
@@ -955,7 +1035,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C06:G01:S01,
@@ -979,7 +1061,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C06:G02:S01,
@@ -1003,7 +1087,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C06:G03:S01,
@@ -1027,7 +1113,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C06:G04:S01,
@@ -1051,7 +1139,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C06:G05:S01,
@@ -1075,7 +1165,9 @@
   patterntype = {key},
   settype = {Session},
   title = {(untitled)},
-  chairperson = {},
+  level = {3},
+  editorctype={organizer},
+  editorc = {},
 }
 
 @InProceedings{ICUS18:C06:G06:S01,
